Updated MDX renderer to be type safe with props (#77)

--- a/examples/custom/mistral/src/app/api/endpoint/batch/jobs/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/batch/jobs/page.mdx
@@ -152,6 +152,7 @@ OK
   id="data"
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout\">BatchJobOut</a>","children":[{"label":"BatchJobOut","linkedLabel":"<a href=\"#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout\">BatchJobOut</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -167,7 +168,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_BatchJobOut"
-  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout" parentId="data"
+  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -198,6 +200,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_completed_at"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -273,6 +276,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_error_file"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -307,7 +311,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_BatchJobOut_errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror" parentId="data_BatchJobOut_errors"
+  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror"
+  parentId="data_BatchJobOut_errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -338,6 +343,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror_count"
   parentId="data_BatchJobOut_errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -438,6 +444,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_metadata"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -475,6 +482,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_object"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -499,6 +507,7 @@ _Default Value:_ `"batch"`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_output_file"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -517,6 +526,7 @@ _Default Value:_ `"batch"`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_started_at"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -591,6 +601,7 @@ _Default Value:_ `"batch"`
   id="object"
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"list\"","linkedLabel":"\"list\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -790,6 +801,7 @@ with Mistral(
   id="metadata"
   headingId="operation-jobs_api_routes_batch_create_batch_job_request_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -825,6 +837,7 @@ with Mistral(
   id="timeout_hours"
   headingId="operation-jobs_api_routes_batch_create_batch_job_request_timeout_hours"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -882,6 +895,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -953,6 +967,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -986,7 +1001,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1017,6 +1033,7 @@ OK
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror_count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1113,6 +1130,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1148,6 +1166,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1171,6 +1190,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1188,6 +1208,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1427,6 +1448,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1498,6 +1520,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1531,7 +1554,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1562,6 +1586,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror_count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1658,6 +1683,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1693,6 +1719,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1716,6 +1743,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1733,6 +1761,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1972,6 +2001,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2043,6 +2073,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2076,7 +2107,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2107,6 +2139,7 @@ OK
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror_count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2203,6 +2236,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2238,6 +2272,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2261,6 +2296,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2278,6 +2314,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
