--- a/examples/custom/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -207,6 +207,7 @@ mistral-embed
   id="output_dimension"
   headingId="operation-embeddings_v1_embeddings_post_request_output_dimension"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -224,6 +225,7 @@ mistral-embed
   id="output_dtype"
   headingId="operation-embeddings_v1_embeddings_post_request_output_dtype"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -291,7 +293,8 @@ Successful Response
 <ExpandableBreakout
   slot="entry"
   id="data_EmbeddingResponseData"
-  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata" parentId="data"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -322,6 +325,7 @@ Successful Response
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_embedding"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -340,6 +344,7 @@ Successful Response
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_index"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -368,6 +373,7 @@ _Example:_
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_object"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
