--- a/examples/custom/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/fim/page.mdx
@@ -147,6 +147,7 @@ with Mistral(
   id="max_tokens"
   headingId="operation-fim_completion_v1_fim_completions_post_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -164,6 +165,7 @@ with Mistral(
   id="min_tokens"
   headingId="operation-fim_completion_v1_fim_completions_post_request_min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -251,6 +253,7 @@ def
   id="random_seed"
   headingId="operation-fim_completion_v1_fim_completions_post_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -268,6 +271,7 @@ def
   id="stop"
   headingId="operation-fim_completion_v1_fim_completions_post_request_stop"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -291,6 +295,7 @@ Stop generation if this token is detected. Or if one of these tokens is detected
   id="stream"
   headingId="operation-fim_completion_v1_fim_completions_post_request_stream"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -320,6 +325,7 @@ _Default Value:_ `false`
   id="suffix"
   headingId="operation-fim_completion_v1_fim_completions_post_request_suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -347,6 +353,7 @@ return a+b
   id="temperature"
   headingId="operation-fim_completion_v1_fim_completions_post_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -364,6 +371,7 @@ return a+b
   id="top_p"
   headingId="operation-fim_completion_v1_fim_completions_post_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -443,7 +451,8 @@ Successful Response
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice" parentId="choices"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice"
+  parentId="choices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -551,6 +560,7 @@ _Example:_
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -566,7 +576,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_TextChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -616,6 +627,7 @@ _Example:_
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk_type"
   parentId="choices_ChatCompletionChoice_message_content_TextChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -637,7 +649,8 @@ _Default Value:_ `"text"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ImageURLChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -686,7 +699,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_image_url_imageurl" parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_image_url_imageurl"
+  parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -717,6 +731,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_image_url_imageurl_detail"
   parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -754,6 +769,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_type"
   parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -775,7 +791,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -806,6 +823,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk_document_name"
   parentId="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -843,6 +861,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk_type"
   parentId="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -864,7 +883,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ReferenceChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -914,6 +934,7 @@ _Default Value:_ `"document_url"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk_type"
   parentId="choices_ChatCompletionChoice_message_content_ReferenceChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -938,6 +959,7 @@ _Default Value:_ `"reference"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_prefix"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -968,6 +990,7 @@ _Default Value:_ `false`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_role"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"assistant\"","linkedLabel":"\"assistant\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -992,6 +1015,7 @@ _Default Value:_ `"assistant"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1007,7 +1031,8 @@ _Default Value:_ `"assistant"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall" parentId="choices_ChatCompletionChoice_message_tool_calls"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall"
+  parentId="choices_ChatCompletionChoice_message_tool_calls"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1095,6 +1120,7 @@ _Default Value:_ `"assistant"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall_id"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1119,6 +1145,7 @@ _Default Value:_ `"null"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall_index"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1143,6 +1170,7 @@ _Default Value:_ `0`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall_type"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1499,6 +1527,7 @@ with Mistral(
   id="max_tokens"
   headingId="operation-stream_fim_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1516,6 +1545,7 @@ with Mistral(
   id="min_tokens"
   headingId="operation-stream_fim_request_min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1603,6 +1633,7 @@ def
   id="random_seed"
   headingId="operation-stream_fim_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1620,6 +1651,7 @@ def
   id="stop"
   headingId="operation-stream_fim_request_stop"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1643,6 +1675,7 @@ Stop generation if this token is detected. Or if one of these tokens is detected
   id="stream"
   headingId="operation-stream_fim_request_stream"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1666,6 +1699,7 @@ _Default Value:_ `true`
   id="suffix"
   headingId="operation-stream_fim_request_suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1693,6 +1727,7 @@ return a+b
   id="temperature"
   headingId="operation-stream_fim_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1710,6 +1745,7 @@ return a+b
   id="top_p"
   headingId="operation-stream_fim_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1843,7 +1879,8 @@ A stream of FIM completion events
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice" parentId="CompletionEvent_data_choices"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice"
+  parentId="CompletionEvent_data_choices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1893,6 +1930,7 @@ A stream of FIM completion events
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1908,7 +1946,8 @@ A stream of FIM completion events
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_TextChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1958,6 +1997,7 @@ A stream of FIM completion events
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_TextChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1979,7 +2019,8 @@ _Default Value:_ `"text"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2028,7 +2069,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_image_url_imageurl" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_image_url_imageurl"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2059,6 +2101,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_image_url_imageurl_detail"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2096,6 +2139,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2117,7 +2161,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2148,6 +2193,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk_document_name"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2185,6 +2231,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2206,7 +2253,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ReferenceChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2256,6 +2304,7 @@ _Default Value:_ `"document_url"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ReferenceChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2280,6 +2329,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_role"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2298,6 +2348,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2313,7 +2364,8 @@ _Default Value:_ `"reference"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2401,6 +2453,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall_id"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2425,6 +2478,7 @@ _Default Value:_ `"null"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall_index"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2449,6 +2503,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2505,6 +2560,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_created"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2561,6 +2617,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_object"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2579,6 +2636,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_usage"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_usage_usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
