--- a/examples/docusaurus/mistral/docs/api/endpoint/batch/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/batch/jobs.mdx
@@ -157,6 +157,7 @@ OK
   id="data"
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout\">BatchJobOut</a>","children":[{"label":"BatchJobOut","linkedLabel":"<a href=\"#operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout\">BatchJobOut</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -172,7 +173,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_BatchJobOut"
-  headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout" parentId="data"
+  headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -203,6 +205,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+completed_at"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -278,6 +281,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+error_file"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -312,7 +316,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_BatchJobOut_errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+errors+batcherror" parentId="data_BatchJobOut_errors"
+  headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+errors+batcherror"
+  parentId="data_BatchJobOut_errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -343,6 +348,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+errors+batcherror+count"
   parentId="data_BatchJobOut_errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -443,6 +449,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+metadata"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -480,6 +487,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+object"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -504,6 +512,7 @@ _Default Value:_ `"batch"`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+output_file"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -522,6 +531,7 @@ _Default Value:_ `"batch"`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+data+batchjobout+started_at"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -596,6 +606,7 @@ _Default Value:_ `"batch"`
   id="object"
   headingId="operation-jobs_api_routes_batch_get_batch_jobs+responses+200+application-json+object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"list\"","linkedLabel":"\"list\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -795,6 +806,7 @@ with Mistral(
   id="metadata"
   headingId="operation-jobs_api_routes_batch_create_batch_job+request+metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -830,6 +842,7 @@ with Mistral(
   id="timeout_hours"
   headingId="operation-jobs_api_routes_batch_create_batch_job+request+timeout_hours"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -887,6 +900,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -958,6 +972,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -991,7 +1006,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+errors+batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+errors+batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1022,6 +1038,7 @@ OK
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+errors+batcherror+count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1118,6 +1135,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1153,6 +1171,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1176,6 +1195,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1193,6 +1213,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_create_batch_job+responses+200+application-json+started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1432,6 +1453,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1503,6 +1525,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1536,7 +1559,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+errors+batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+errors+batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1567,6 +1591,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+errors+batcherror+count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1663,6 +1688,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1698,6 +1724,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1721,6 +1748,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1738,6 +1766,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_get_batch_job+responses+200+application-json+started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1977,6 +2006,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2048,6 +2078,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2081,7 +2112,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+errors+batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+errors+batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2112,6 +2144,7 @@ OK
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+errors+batcherror+count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2208,6 +2241,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2243,6 +2277,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2266,6 +2301,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2283,6 +2319,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job+responses+200+application-json+started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
