--- a/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
@@ -212,6 +212,7 @@ mistral-embed
   id="output_dimension"
   headingId="operation-embeddings_v1_embeddings_post+request+output_dimension"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -229,6 +230,7 @@ mistral-embed
   id="output_dtype"
   headingId="operation-embeddings_v1_embeddings_post+request+output_dtype"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -296,7 +298,8 @@ Successful Response
 <ExpandableBreakout
   slot="entry"
   id="data_EmbeddingResponseData"
-  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata" parentId="data"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -327,6 +330,7 @@ Successful Response
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+embedding"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -345,6 +349,7 @@ Successful Response
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+index"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -373,6 +378,7 @@ _Example:_
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+object"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
