--- a/examples/docusaurus/mistral/docs/api/endpoint/fim.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fim.mdx
@@ -152,6 +152,7 @@ with Mistral(
   id="max_tokens"
   headingId="operation-fim_completion_v1_fim_completions_post+request+max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -169,6 +170,7 @@ with Mistral(
   id="min_tokens"
   headingId="operation-fim_completion_v1_fim_completions_post+request+min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -256,6 +258,7 @@ def
   id="random_seed"
   headingId="operation-fim_completion_v1_fim_completions_post+request+random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -273,6 +276,7 @@ def
   id="stop"
   headingId="operation-fim_completion_v1_fim_completions_post+request+stop"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -296,6 +300,7 @@ Stop generation if this token is detected. Or if one of these tokens is detected
   id="stream"
   headingId="operation-fim_completion_v1_fim_completions_post+request+stream"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -325,6 +330,7 @@ _Default Value:_ `false`
   id="suffix"
   headingId="operation-fim_completion_v1_fim_completions_post+request+suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -352,6 +358,7 @@ return a+b
   id="temperature"
   headingId="operation-fim_completion_v1_fim_completions_post+request+temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -369,6 +376,7 @@ return a+b
   id="top_p"
   headingId="operation-fim_completion_v1_fim_completions_post+request+top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -448,7 +456,8 @@ Successful Response
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice" parentId="choices"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice"
+  parentId="choices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -556,6 +565,7 @@ _Example:_
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+textchunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+referencechunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -571,7 +581,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_TextChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+textchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+textchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -621,6 +632,7 @@ _Example:_
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+textchunk+type"
   parentId="choices_ChatCompletionChoice_message_content_TextChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -642,7 +654,8 @@ _Default Value:_ `"text"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ImageURLChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -691,7 +704,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk+image_url+imageurl" parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk+image_url+imageurl"
+  parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -722,6 +736,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk+image_url+imageurl+detail"
   parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -759,6 +774,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+imageurlchunk+type"
   parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -780,7 +796,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+documenturlchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+documenturlchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -811,6 +828,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+documenturlchunk+document_name"
   parentId="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -848,6 +866,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+documenturlchunk+type"
   parentId="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -869,7 +888,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ReferenceChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+referencechunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+referencechunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -919,6 +939,7 @@ _Default Value:_ `"document_url"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+content+referencechunk+type"
   parentId="choices_ChatCompletionChoice_message_content_ReferenceChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -943,6 +964,7 @@ _Default Value:_ `"reference"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+prefix"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -973,6 +995,7 @@ _Default Value:_ `false`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+role"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"assistant\"","linkedLabel":"\"assistant\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -997,6 +1020,7 @@ _Default Value:_ `"assistant"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1012,7 +1036,8 @@ _Default Value:_ `"assistant"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
-  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall" parentId="choices_ChatCompletionChoice_message_tool_calls"
+  headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall"
+  parentId="choices_ChatCompletionChoice_message_tool_calls"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1100,6 +1125,7 @@ _Default Value:_ `"assistant"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall+id"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1124,6 +1150,7 @@ _Default Value:_ `"null"`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall+index"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1148,6 +1175,7 @@ _Default Value:_ `0`
   headingId="operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+chatcompletionchoice+message+tool_calls+toolcall+type"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1504,6 +1532,7 @@ with Mistral(
   id="max_tokens"
   headingId="operation-stream_fim+request+max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1521,6 +1550,7 @@ with Mistral(
   id="min_tokens"
   headingId="operation-stream_fim+request+min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1608,6 +1638,7 @@ def
   id="random_seed"
   headingId="operation-stream_fim+request+random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1625,6 +1656,7 @@ def
   id="stop"
   headingId="operation-stream_fim+request+stop"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1648,6 +1680,7 @@ Stop generation if this token is detected. Or if one of these tokens is detected
   id="stream"
   headingId="operation-stream_fim+request+stream"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1671,6 +1704,7 @@ _Default Value:_ `true`
   id="suffix"
   headingId="operation-stream_fim+request+suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1698,6 +1732,7 @@ return a+b
   id="temperature"
   headingId="operation-stream_fim+request+temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1715,6 +1750,7 @@ return a+b
   id="top_p"
   headingId="operation-stream_fim+request+top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1848,7 +1884,8 @@ A stream of FIM completion events
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice" parentId="CompletionEvent_data_choices"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice"
+  parentId="CompletionEvent_data_choices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1898,6 +1935,7 @@ A stream of FIM completion events
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+textchunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+referencechunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1913,7 +1951,8 @@ A stream of FIM completion events
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_TextChunk"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+textchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+textchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1963,6 +2002,7 @@ A stream of FIM completion events
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+textchunk+type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_TextChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1984,7 +2024,8 @@ _Default Value:_ `"text"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2033,7 +2074,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk+image_url+imageurl" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk+image_url+imageurl"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2064,6 +2106,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk+image_url+imageurl+detail"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2101,6 +2144,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+imageurlchunk+type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2122,7 +2166,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+documenturlchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+documenturlchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2153,6 +2198,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+documenturlchunk+document_name"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2190,6 +2236,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+documenturlchunk+type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2211,7 +2258,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ReferenceChunk"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+referencechunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+referencechunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2261,6 +2309,7 @@ _Default Value:_ `"document_url"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+content+referencechunk+type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ReferenceChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2285,6 +2334,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+role"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2303,6 +2353,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2318,7 +2369,8 @@ _Default Value:_ `"reference"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
-  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls"
+  headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2406,6 +2458,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall+id"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2430,6 +2483,7 @@ _Default Value:_ `"null"`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall+index"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2454,6 +2508,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+choices+completionresponsestreamchoice+delta+tool_calls+toolcall+type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2510,6 +2565,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+created"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2566,6 +2622,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+object"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2584,6 +2641,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim+responses+200+text-event-stream+completionevent+data+usage"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-stream_fim+responses+200+text-event-stream+completionevent+data+usage+usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
