--- a/examples/docusaurus/pokeapi/docs/api/endpoint/berries.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/berries.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_berry_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_berry_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_berry_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_berry_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_berry_list+responses+200+application-json+results+berrysummary\">BerrySummary</a>","children":[{"label":"BerrySummary","linkedLabel":"<a href=\"#operation-api_v2_berry_list+responses+200+application-json+results+berrysummary\">BerrySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_BerrySummary"
-  headingId="operation-api_v2_berry_list+responses+200+application-json+results+berrysummary" parentId="results"
+  headingId="operation-api_v2_berry_list+responses+200+application-json+results+berrysummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -617,7 +622,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="flavors_flavor"
-  headingId="operation-api_v2_berry_retrieve+responses+200+application-json+flavors+flavor" parentId="flavors"
+  headingId="operation-api_v2_berry_retrieve+responses+200+application-json+flavors+flavor"
+  parentId="flavors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1133,6 +1139,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1160,6 +1167,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1187,6 +1195,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1214,6 +1223,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_berry_firmness_list+responses+200+application-json+results+berryfirmnesssummary\">BerryFirmnessSummary</a>","children":[{"label":"BerryFirmnessSummary","linkedLabel":"<a href=\"#operation-api_v2_berry_firmness_list+responses+200+application-json+results+berryfirmnesssummary\">BerryFirmnessSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1229,7 +1239,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_BerryFirmnessSummary"
-  headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+results+berryfirmnesssummary" parentId="results"
+  headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+results+berryfirmnesssummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1465,7 +1476,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="berries_BerrySummary"
-  headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+berries+berrysummary" parentId="berries"
+  headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+berries+berrysummary"
+  parentId="berries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1585,7 +1597,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_BerryFirmnessName"
-  headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+names+berryfirmnessname" parentId="names"
+  headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+names+berryfirmnessname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1892,6 +1905,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1919,6 +1933,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1946,6 +1961,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1973,6 +1989,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_berry_flavor_list+responses+200+application-json+results+berryflavorsummary\">BerryFlavorSummary</a>","children":[{"label":"BerryFlavorSummary","linkedLabel":"<a href=\"#operation-api_v2_berry_flavor_list+responses+200+application-json+results+berryflavorsummary\">BerryFlavorSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1988,7 +2005,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_BerryFlavorSummary"
-  headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+results+berryflavorsummary" parentId="results"
+  headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+results+berryflavorsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2224,7 +2242,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="berries_berry"
-  headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+berries+berry" parentId="berries"
+  headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+berries+berry"
+  parentId="berries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2391,7 +2410,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="names_BerryFlavorName"
-  headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+names+berryflavorname" parentId="names"
+  headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+names+berryflavorname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
