--- a/examples/docusaurus/pokeapi/docs/api/endpoint/encounters.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/encounters.mdx
@@ -231,6 +231,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_encounter_method_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -258,6 +259,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_encounter_method_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -285,6 +287,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_encounter_method_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -312,6 +315,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_encounter_method_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_list+responses+200+application-json+results+encountermethodsummary\">EncounterMethodSummary</a>","children":[{"label":"EncounterMethodSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_list+responses+200+application-json+results+encountermethodsummary\">EncounterMethodSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -327,7 +331,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EncounterMethodSummary"
-  headingId="operation-api_v2_encounter_method_list+responses+200+application-json+results+encountermethodsummary" parentId="results"
+  headingId="operation-api_v2_encounter_method_list+responses+200+application-json+results+encountermethodsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -599,7 +604,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EncounterMethodName"
-  headingId="operation-api_v2_encounter_method_retrieve+responses+200+application-json+names+encountermethodname" parentId="names"
+  headingId="operation-api_v2_encounter_method_retrieve+responses+200+application-json+names+encountermethodname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -705,6 +711,7 @@ This parameter can be a string or an integer.
   id="order"
   headingId="operation-api_v2_encounter_method_retrieve+responses+200+application-json+order"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -923,6 +930,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -950,6 +958,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -977,6 +986,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1004,6 +1014,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_list+responses+200+application-json+results+encounterconditionsummary\">EncounterConditionSummary</a>","children":[{"label":"EncounterConditionSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_list+responses+200+application-json+results+encounterconditionsummary\">EncounterConditionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1019,7 +1030,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EncounterConditionSummary"
-  headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+results+encounterconditionsummary" parentId="results"
+  headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+results+encounterconditionsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1291,7 +1303,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EncounterConditionName"
-  headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+names+encounterconditionname" parentId="names"
+  headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+names+encounterconditionname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1413,7 +1426,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="values_EncounterConditionValueSummary"
-  headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+values+encounterconditionvaluesummary" parentId="values"
+  headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+values+encounterconditionvaluesummary"
+  parentId="values"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1682,6 +1696,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1709,6 +1724,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1736,6 +1752,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1763,6 +1780,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_list+responses+200+application-json+results+encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[{"label":"EncounterConditionValueSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_list+responses+200+application-json+results+encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1778,7 +1796,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EncounterConditionValueSummary"
-  headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+results+encounterconditionvaluesummary" parentId="results"
+  headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+results+encounterconditionvaluesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2106,7 +2125,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EncounterConditionValueName"
-  headingId="operation-api_v2_encounter_condition_value_retrieve+responses+200+application-json+names+encounterconditionvaluename" parentId="names"
+  headingId="operation-api_v2_encounter_condition_value_retrieve+responses+200+application-json+names+encounterconditionvaluename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2486,7 +2506,8 @@ https://pokeapi.co/api/v2/location-area/281/
 <ExpandableBreakout
   slot="entry"
   id="ResponseBody_version_details_version_detail"
-  headingId="operation-api_v2_pokemon_encounters_retrieve+responses+200+application-json+responsebody+version_details+version_detail" parentId="ResponseBody_version_details"
+  headingId="operation-api_v2_pokemon_encounters_retrieve+responses+200+application-json+responsebody+version_details+version_detail"
+  parentId="ResponseBody_version_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2533,7 +2554,8 @@ https://pokeapi.co/api/v2/location-area/281/
 <ExpandableBreakout
   slot="entry"
   id="ResponseBody_version_details_version_detail_encounter_details_encounter_detail"
-  headingId="operation-api_v2_pokemon_encounters_retrieve+responses+200+application-json+responsebody+version_details+version_detail+encounter_details+encounter_detail" parentId="ResponseBody_version_details_version_detail_encounter_details"
+  headingId="operation-api_v2_pokemon_encounters_retrieve+responses+200+application-json+responsebody+version_details+version_detail+encounter_details+encounter_detail"
+  parentId="ResponseBody_version_details_version_detail_encounter_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2609,7 +2631,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="ResponseBody_version_details_version_detail_encounter_details_encounter_detail_condition_values_condition_value"
-  headingId="operation-api_v2_pokemon_encounters_retrieve+responses+200+application-json+responsebody+version_details+version_detail+encounter_details+encounter_detail+condition_values+condition_value" parentId="ResponseBody_version_details_version_detail_encounter_details_encounter_detail_condition_values"
+  headingId="operation-api_v2_pokemon_encounters_retrieve+responses+200+application-json+responsebody+version_details+version_detail+encounter_details+encounter_detail+condition_values+condition_value"
+  parentId="ResponseBody_version_details_version_detail_encounter_details_encounter_detail_condition_values"
   hasFrontMatter={false}
   expandByDefault={false}
 >
