--- a/examples/docusaurus/pokeapi/docs/api/endpoint/evolution.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/evolution.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary\">EvolutionChainSummary</a>","children":[{"label":"EvolutionChainSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary\">EvolutionChainSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EvolutionChainSummary"
-  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary" parentId="results"
+  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -693,7 +698,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail"
-  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail" parentId="chain_species_evolution_details"
+  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail"
+  parentId="chain_species_evolution_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -759,7 +765,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_held_item_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+held_item+gender" parentId="chain_species_evolution_details_evolution_detail_held_item"
+  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+held_item+gender"
+  parentId="chain_species_evolution_details_evolution_detail_held_item"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -864,7 +871,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_item_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+item+gender" parentId="chain_species_evolution_details_evolution_detail_item"
+  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+item+gender"
+  parentId="chain_species_evolution_details_evolution_detail_item"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1007,7 +1015,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_location_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+location+gender" parentId="chain_species_evolution_details_evolution_detail_location"
+  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+location+gender"
+  parentId="chain_species_evolution_details_evolution_detail_location"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1302,7 +1311,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_trigger_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+trigger+gender" parentId="chain_species_evolution_details_evolution_detail_trigger"
+  headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+species+evolution_details+evolution_detail+trigger+gender"
+  parentId="chain_species_evolution_details_evolution_detail_trigger"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1647,6 +1657,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1674,6 +1685,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1701,6 +1713,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1728,6 +1741,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary\">EvolutionTriggerSummary</a>","children":[{"label":"EvolutionTriggerSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary\">EvolutionTriggerSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1743,7 +1757,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EvolutionTriggerSummary"
-  headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary" parentId="results"
+  headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2015,7 +2030,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EvolutionTriggerName"
-  headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername" parentId="names"
+  headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2137,7 +2153,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_species_pokemon_specie"
-  headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie" parentId="pokemon_species"
+  headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie"
+  parentId="pokemon_species"
   hasFrontMatter={false}
   expandByDefault={false}
 >
