--- a/examples/docusaurus/pokeapi/docs/api/endpoint/items.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/items.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_list+responses+200+application-json+results+itemsummary\">ItemSummary</a>","children":[{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_item_list+responses+200+application-json+results+itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemSummary"
-  headingId="operation-api_v2_item_list+responses+200+application-json+results+itemsummary" parentId="results"
+  headingId="operation-api_v2_item_list+responses+200+application-json+results+itemsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -561,7 +566,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="attributes_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+attributes+attribute" parentId="attributes"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+attributes+attribute"
+  parentId="attributes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -781,6 +787,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="cost"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+cost"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -814,7 +821,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_ItemEffectText"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+effect_entries+itemeffecttext" parentId="effect_entries"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+effect_entries+itemeffecttext"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -955,7 +963,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_ItemFlavorText"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+flavor_text_entries+itemflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+flavor_text_entries+itemflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1174,6 +1183,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="fling_power"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+fling_power"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1207,7 +1217,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="game_indices_ItemGameIndex"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+game_indices+itemgameindex" parentId="game_indices"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+game_indices+itemgameindex"
+  parentId="game_indices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1329,7 +1340,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="held_by_pokemon_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute" parentId="held_by_pokemon"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+held_by_pokemon+attribute"
+  parentId="held_by_pokemon"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1451,7 +1463,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="machines_attribute"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute" parentId="machines"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+machines+attribute"
+  parentId="machines"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1573,7 +1586,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="names_ItemName"
-  headingId="operation-api_v2_item_retrieve+responses+200+application-json+names+itemname" parentId="names"
+  headingId="operation-api_v2_item_retrieve+responses+200+application-json+names+itemname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1956,6 +1970,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_category_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1983,6 +1998,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_category_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2010,6 +2026,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_category_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2037,6 +2054,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_category_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_category_list+responses+200+application-json+results+itemcategorysummary\">ItemCategorySummary</a>","children":[{"label":"ItemCategorySummary","linkedLabel":"<a href=\"#operation-api_v2_item_category_list+responses+200+application-json+results+itemcategorysummary\">ItemCategorySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2052,7 +2070,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemCategorySummary"
-  headingId="operation-api_v2_item_category_list+responses+200+application-json+results+itemcategorysummary" parentId="results"
+  headingId="operation-api_v2_item_category_list+responses+200+application-json+results+itemcategorysummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2306,7 +2325,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="items_ItemSummary"
-  headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+items+itemsummary" parentId="items"
+  headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+items+itemsummary"
+  parentId="items"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2408,7 +2428,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_ItemCategoryName"
-  headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+names+itemcategoryname" parentId="names"
+  headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+names+itemcategoryname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2771,6 +2792,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_attribute_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2798,6 +2820,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_attribute_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2825,6 +2848,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_attribute_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2852,6 +2876,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_attribute_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_attribute_list+responses+200+application-json+results+itemattributesummary\">ItemAttributeSummary</a>","children":[{"label":"ItemAttributeSummary","linkedLabel":"<a href=\"#operation-api_v2_item_attribute_list+responses+200+application-json+results+itemattributesummary\">ItemAttributeSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2867,7 +2892,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemAttributeSummary"
-  headingId="operation-api_v2_item_attribute_list+responses+200+application-json+results+itemattributesummary" parentId="results"
+  headingId="operation-api_v2_item_attribute_list+responses+200+application-json+results+itemattributesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3103,7 +3129,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_ItemAttributeDescription"
-  headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+descriptions+itemattributedescription" parentId="descriptions"
+  headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+descriptions+itemattributedescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3134,6 +3161,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+descriptions+itemattributedescription+description"
   parentId="descriptions_ItemAttributeDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3242,7 +3270,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="items_item"
-  headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+items+item" parentId="items"
+  headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+items+item"
+  parentId="items"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3364,7 +3393,8 @@ https://pokeapi.co/api/v2/item/1/
 <ExpandableBreakout
   slot="entry"
   id="names_ItemAttributeName"
-  headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+names+itemattributename" parentId="names"
+  headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+names+itemattributename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3671,6 +3701,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3698,6 +3729,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3725,6 +3757,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3752,6 +3785,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_fling_effect_list+responses+200+application-json+results+itemflingeffectsummary\">ItemFlingEffectSummary</a>","children":[{"label":"ItemFlingEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_item_fling_effect_list+responses+200+application-json+results+itemflingeffectsummary\">ItemFlingEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3767,7 +3801,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemFlingEffectSummary"
-  headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+results+itemflingeffectsummary" parentId="results"
+  headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+results+itemflingeffectsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4003,7 +4038,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_ItemFlingEffectEffectText"
-  headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+effect_entries+itemflingeffecteffecttext" parentId="effect_entries"
+  headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+effect_entries+itemflingeffecteffecttext"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4143,7 +4179,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="items_ItemSummary"
-  headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+items+itemsummary" parentId="items"
+  headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+items+itemsummary"
+  parentId="items"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4430,6 +4467,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_pocket_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -4457,6 +4495,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_pocket_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -4484,6 +4523,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_pocket_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -4511,6 +4551,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_pocket_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_pocket_list+responses+200+application-json+results+itempocketsummary\">ItemPocketSummary</a>","children":[{"label":"ItemPocketSummary","linkedLabel":"<a href=\"#operation-api_v2_item_pocket_list+responses+200+application-json+results+itempocketsummary\">ItemPocketSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4526,7 +4567,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemPocketSummary"
-  headingId="operation-api_v2_item_pocket_list+responses+200+application-json+results+itempocketsummary" parentId="results"
+  headingId="operation-api_v2_item_pocket_list+responses+200+application-json+results+itempocketsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4762,7 +4804,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="categories_ItemCategorySummary"
-  headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+categories+itemcategorysummary" parentId="categories"
+  headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+categories+itemcategorysummary"
+  parentId="categories"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4882,7 +4925,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_ItemPocketName"
-  headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+names+itempocketname" parentId="names"
+  headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+names+itempocketname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
