--- a/examples/docusaurus/pokeapi/docs/api/endpoint/location.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/location.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_location_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_location_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_location_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_location_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_list+responses+200+application-json+results+locationsummary\">LocationSummary</a>","children":[{"label":"LocationSummary","linkedLabel":"<a href=\"#operation-api_v2_location_list+responses+200+application-json+results+locationsummary\">LocationSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_LocationSummary"
-  headingId="operation-api_v2_location_list+responses+200+application-json+results+locationsummary" parentId="results"
+  headingId="operation-api_v2_location_list+responses+200+application-json+results+locationsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -561,7 +566,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="areas_LocationAreaSummary"
-  headingId="operation-api_v2_location_retrieve+responses+200+application-json+areas+locationareasummary" parentId="areas"
+  headingId="operation-api_v2_location_retrieve+responses+200+application-json+areas+locationareasummary"
+  parentId="areas"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -645,7 +651,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="game_indices_LocationGameIndex"
-  headingId="operation-api_v2_location_retrieve+responses+200+application-json+game_indices+locationgameindex" parentId="game_indices"
+  headingId="operation-api_v2_location_retrieve+responses+200+application-json+game_indices+locationgameindex"
+  parentId="game_indices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -803,7 +810,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_LocationName"
-  headingId="operation-api_v2_location_retrieve+responses+200+application-json+names+locationname" parentId="names"
+  headingId="operation-api_v2_location_retrieve+responses+200+application-json+names+locationname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1141,6 +1149,7 @@ The initial index from which to return the results.
   id="count"
   headingId="operation-api_v2_location_area_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1168,6 +1177,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_location_area_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1195,6 +1205,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_location_area_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1222,6 +1233,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_location_area_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_list+responses+200+application-json+results+locationareasummary\">LocationAreaSummary</a>","children":[{"label":"LocationAreaSummary","linkedLabel":"<a href=\"#operation-api_v2_location_area_list+responses+200+application-json+results+locationareasummary\">LocationAreaSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1237,7 +1249,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_LocationAreaSummary"
-  headingId="operation-api_v2_location_area_list+responses+200+application-json+results+locationareasummary" parentId="results"
+  headingId="operation-api_v2_location_area_list+responses+200+application-json+results+locationareasummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1473,7 +1486,8 @@ A unique integer value identifying this location area.
 <ExpandableBreakout
   slot="entry"
   id="encounter_method_rates_encounter_method_rate"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate" parentId="encounter_method_rates"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate"
+  parentId="encounter_method_rates"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1597,7 +1611,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method" parentId="encounter_method_rates_encounter_method_rate_version_details"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+encounter_method_rates+encounter_method_rate+version_details+encounter_method"
+  parentId="encounter_method_rates_encounter_method_rate_version_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1811,7 +1826,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="names_LocationAreaName"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+names+locationareaname" parentId="names"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+names+locationareaname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1933,7 +1949,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="pokemon_encounters_encounter_method_rate"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate" parentId="pokemon_encounters"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate"
+  parentId="pokemon_encounters"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2057,7 +2074,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method" parentId="pokemon_encounters_encounter_method_rate_version_details"
+  headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+pokemon_encounters+encounter_method_rate+version_details+encounter_method"
+  parentId="pokemon_encounters_encounter_method_rate_version_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2346,6 +2364,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2373,6 +2392,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2400,6 +2420,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2427,6 +2448,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pal_park_area_list+responses+200+application-json+results+palparkareasummary\">PalParkAreaSummary</a>","children":[{"label":"PalParkAreaSummary","linkedLabel":"<a href=\"#operation-api_v2_pal_park_area_list+responses+200+application-json+results+palparkareasummary\">PalParkAreaSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2442,7 +2464,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_PalParkAreaSummary"
-  headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+results+palparkareasummary" parentId="results"
+  headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+results+palparkareasummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2714,7 +2737,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_PalParkAreaName"
-  headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+names+palparkareaname" parentId="names"
+  headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+names+palparkareaname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2836,7 +2860,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_encounters_pokemon_encounter"
-  headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter" parentId="pokemon_encounters"
+  headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+pokemon_encounters+pokemon_encounter"
+  parentId="pokemon_encounters"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3202,6 +3227,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_region_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3229,6 +3255,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_region_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3256,6 +3283,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_region_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3283,6 +3311,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_region_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_region_list+responses+200+application-json+results+regionsummary\">RegionSummary</a>","children":[{"label":"RegionSummary","linkedLabel":"<a href=\"#operation-api_v2_region_list+responses+200+application-json+results+regionsummary\">RegionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3298,7 +3327,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_RegionSummary"
-  headingId="operation-api_v2_region_list+responses+200+application-json+results+regionsummary" parentId="results"
+  headingId="operation-api_v2_region_list+responses+200+application-json+results+regionsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3552,7 +3582,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="locations_LocationSummary"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+locations+locationsummary" parentId="locations"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+locations+locationsummary"
+  parentId="locations"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3710,7 +3741,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_RegionName"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+names+regionname" parentId="names"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+names+regionname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3832,7 +3864,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokedexes_PokedexSummary"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+pokedexes+pokedexsummary" parentId="pokedexes"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+pokedexes+pokedexsummary"
+  parentId="pokedexes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3916,7 +3949,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="version_groups_main_generation"
-  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation" parentId="version_groups"
+  headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
