--- a/examples/docusaurus/pokeapi/docs/api/endpoint/moves.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/moves.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_list+responses+200+application-json+results+movesummary\">MoveSummary</a>","children":[{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_move_list+responses+200+application-json+results+movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveSummary"
-  headingId="operation-api_v2_move_list+responses+200+application-json+results+movesummary" parentId="results"
+  headingId="operation-api_v2_move_list+responses+200+application-json+results+movesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -545,6 +550,7 @@ This parameter can be a string or an integer.
   id="accuracy"
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+accuracy"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -616,7 +622,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+contest_combos+normal+use_after+use_before" parentId="contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+contest_combos+normal+use_after+use_before"
+  parentId="contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -759,7 +766,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+contest_combos+super+use_after+use_before" parentId="contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+contest_combos+super+use_after+use_before"
+  parentId="contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1049,7 +1057,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_changes_contest_combos"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_changes+contest_combos" parentId="effect_changes"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_changes+contest_combos"
+  parentId="effect_changes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1115,7 +1124,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_changes_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_changes+contest_combos+normal+use_after+use_before" parentId="effect_changes_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_changes+contest_combos+normal+use_after+use_before"
+  parentId="effect_changes_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1258,7 +1268,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_changes_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_changes+contest_combos+super+use_after+use_before" parentId="effect_changes_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_changes+contest_combos+super+use_after+use_before"
+  parentId="effect_changes_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1381,7 +1392,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_contest_combos"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_entries+contest_combos" parentId="effect_entries"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_entries+contest_combos"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1447,7 +1459,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_entries+contest_combos+normal+use_after+use_before" parentId="effect_entries_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_entries+contest_combos+normal+use_after+use_before"
+  parentId="effect_entries_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1590,7 +1603,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_entries+contest_combos+super+use_after+use_before" parentId="effect_entries_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+effect_entries+contest_combos+super+use_after+use_before"
+  parentId="effect_entries_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1713,7 +1727,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_MoveFlavorText"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+flavor_text_entries+moveflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+flavor_text_entries+moveflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1966,7 +1981,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="learned_by_pokemon_contest_combos"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+learned_by_pokemon+contest_combos" parentId="learned_by_pokemon"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+learned_by_pokemon+contest_combos"
+  parentId="learned_by_pokemon"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2032,7 +2048,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="learned_by_pokemon_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+learned_by_pokemon+contest_combos+normal+use_after+use_before" parentId="learned_by_pokemon_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+learned_by_pokemon+contest_combos+normal+use_after+use_before"
+  parentId="learned_by_pokemon_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2175,7 +2192,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="learned_by_pokemon_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+learned_by_pokemon+contest_combos+super+use_after+use_before" parentId="learned_by_pokemon_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+learned_by_pokemon+contest_combos+super+use_after+use_before"
+  parentId="learned_by_pokemon_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2298,7 +2316,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="machines_contest_combos"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+machines+contest_combos" parentId="machines"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+machines+contest_combos"
+  parentId="machines"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2364,7 +2383,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="machines_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+machines+contest_combos+normal+use_after+use_before" parentId="machines_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+machines+contest_combos+normal+use_after+use_before"
+  parentId="machines_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2507,7 +2527,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="machines_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+machines+contest_combos+super+use_after+use_before" parentId="machines_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+machines+contest_combos+super+use_after+use_before"
+  parentId="machines_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2668,7 +2689,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="meta_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+meta+normal+use_after+use_before" parentId="meta_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+meta+normal+use_after+use_before"
+  parentId="meta_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2811,7 +2833,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="meta_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+meta+super+use_after+use_before" parentId="meta_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+meta+super+use_after+use_before"
+  parentId="meta_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2952,7 +2975,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="names_MoveName"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+names+movename" parentId="names"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+names+movename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3074,7 +3098,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="past_values_MoveChange"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange" parentId="past_values"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange"
+  parentId="past_values"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3105,6 +3130,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+accuracy"
   parentId="past_values_MoveChange"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3158,7 +3184,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="past_values_MoveChange_effect_entries_effect_entry"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+effect_entries+effect_entry" parentId="past_values_MoveChange_effect_entries"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+effect_entries+effect_entry"
+  parentId="past_values_MoveChange_effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3324,6 +3351,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+power"
   parentId="past_values_MoveChange"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3342,6 +3370,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+pp"
   parentId="past_values_MoveChange"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3473,6 +3502,7 @@ Inflicts regular damage with no additional effect.
   id="power"
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+power"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3490,6 +3520,7 @@ Inflicts regular damage with no additional effect.
   id="pp"
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+pp"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3507,6 +3538,7 @@ Inflicts regular damage with no additional effect.
   id="priority"
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+priority"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3540,7 +3572,8 @@ Inflicts regular damage with no additional effect.
 <ExpandableBreakout
   slot="entry"
   id="stat_changes_contest_combos"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+stat_changes+contest_combos" parentId="stat_changes"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+stat_changes+contest_combos"
+  parentId="stat_changes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3606,7 +3639,8 @@ Inflicts regular damage with no additional effect.
 <ExpandableBreakout
   slot="entry"
   id="stat_changes_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+stat_changes+contest_combos+normal+use_after+use_before" parentId="stat_changes_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+stat_changes+contest_combos+normal+use_after+use_before"
+  parentId="stat_changes_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3749,7 +3783,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="stat_changes_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve+responses+200+application-json+stat_changes+contest_combos+super+use_after+use_before" parentId="stat_changes_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve+responses+200+application-json+stat_changes+contest_combos+super+use_after+use_before"
+  parentId="stat_changes_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4206,6 +4241,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_ailment_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -4233,6 +4269,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_ailment_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -4260,6 +4297,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_ailment_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -4287,6 +4325,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_ailment_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_ailment_list+responses+200+application-json+results+movemetaailmentsummary\">MoveMetaAilmentSummary</a>","children":[{"label":"MoveMetaAilmentSummary","linkedLabel":"<a href=\"#operation-api_v2_move_ailment_list+responses+200+application-json+results+movemetaailmentsummary\">MoveMetaAilmentSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4302,7 +4341,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveMetaAilmentSummary"
-  headingId="operation-api_v2_move_ailment_list+responses+200+application-json+results+movemetaailmentsummary" parentId="results"
+  headingId="operation-api_v2_move_ailment_list+responses+200+application-json+results+movemetaailmentsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4556,7 +4596,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_move"
-  headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+moves+move" parentId="moves"
+  headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+moves+move"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4678,7 +4719,8 @@ https://pokeapi.co/api/v2/move/9/
 <ExpandableBreakout
   slot="entry"
   id="names_MoveMetaAilmentName"
-  headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+names+movemetaailmentname" parentId="names"
+  headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+names+movemetaailmentname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4985,6 +5027,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5012,6 +5055,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5039,6 +5083,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5066,6 +5111,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_battle_style_list+responses+200+application-json+results+movebattlestylesummary\">MoveBattleStyleSummary</a>","children":[{"label":"MoveBattleStyleSummary","linkedLabel":"<a href=\"#operation-api_v2_move_battle_style_list+responses+200+application-json+results+movebattlestylesummary\">MoveBattleStyleSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5081,7 +5127,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveBattleStyleSummary"
-  headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+results+movebattlestylesummary" parentId="results"
+  headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+results+movebattlestylesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5353,7 +5400,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_MoveBattleStyleName"
-  headingId="operation-api_v2_move_battle_style_retrieve+responses+200+application-json+names+movebattlestylename" parentId="names"
+  headingId="operation-api_v2_move_battle_style_retrieve+responses+200+application-json+names+movebattlestylename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5660,6 +5708,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_category_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5687,6 +5736,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_category_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5714,6 +5764,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_category_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5741,6 +5792,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_category_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_category_list+responses+200+application-json+results+movemetacategorysummary\">MoveMetaCategorySummary</a>","children":[{"label":"MoveMetaCategorySummary","linkedLabel":"<a href=\"#operation-api_v2_move_category_list+responses+200+application-json+results+movemetacategorysummary\">MoveMetaCategorySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5756,7 +5808,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveMetaCategorySummary"
-  headingId="operation-api_v2_move_category_list+responses+200+application-json+results+movemetacategorysummary" parentId="results"
+  headingId="operation-api_v2_move_category_list+responses+200+application-json+results+movemetacategorysummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5992,7 +6045,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_MoveMetaCategoryDescription"
-  headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+descriptions+movemetacategorydescription" parentId="descriptions"
+  headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+descriptions+movemetacategorydescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6023,6 +6077,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+descriptions+movemetacategorydescription+description"
   parentId="descriptions_MoveMetaCategoryDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6131,7 +6186,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_move"
-  headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+moves+move" parentId="moves"
+  headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+moves+move"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6438,6 +6494,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -6465,6 +6522,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -6492,6 +6550,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -6519,6 +6578,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_learn_method_list+responses+200+application-json+results+movelearnmethodsummary\">MoveLearnMethodSummary</a>","children":[{"label":"MoveLearnMethodSummary","linkedLabel":"<a href=\"#operation-api_v2_move_learn_method_list+responses+200+application-json+results+movelearnmethodsummary\">MoveLearnMethodSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -6534,7 +6594,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveLearnMethodSummary"
-  headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+results+movelearnmethodsummary" parentId="results"
+  headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+results+movelearnmethodsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6770,7 +6831,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_MoveLearnMethodDescription"
-  headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+descriptions+movelearnmethoddescription" parentId="descriptions"
+  headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+descriptions+movelearnmethoddescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6801,6 +6863,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+descriptions+movelearnmethoddescription+description"
   parentId="descriptions_MoveLearnMethodDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6927,7 +6990,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_MoveLearnMethodName"
-  headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+names+movelearnmethodname" parentId="names"
+  headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+names+movelearnmethodname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7049,7 +7113,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="version_groups_version_group"
-  headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+version_groups+version_group" parentId="version_groups"
+  headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+version_groups+version_group"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7338,6 +7403,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_target_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -7365,6 +7431,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_target_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -7392,6 +7459,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_target_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -7419,6 +7487,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_target_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_target_list+responses+200+application-json+results+movetargetsummary\">MoveTargetSummary</a>","children":[{"label":"MoveTargetSummary","linkedLabel":"<a href=\"#operation-api_v2_move_target_list+responses+200+application-json+results+movetargetsummary\">MoveTargetSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -7434,7 +7503,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveTargetSummary"
-  headingId="operation-api_v2_move_target_list+responses+200+application-json+results+movetargetsummary" parentId="results"
+  headingId="operation-api_v2_move_target_list+responses+200+application-json+results+movetargetsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7670,7 +7740,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_MoveTargetDescription"
-  headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+descriptions+movetargetdescription" parentId="descriptions"
+  headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+descriptions+movetargetdescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7701,6 +7772,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+descriptions+movetargetdescription+description"
   parentId="descriptions_MoveTargetDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7809,7 +7881,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_MoveSummary"
-  headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+moves+movesummary" parentId="moves"
+  headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+moves+movesummary"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7911,7 +7984,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_MoveTargetName"
-  headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+names+movetargetname" parentId="names"
+  headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+names+movetargetname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
