--- a/examples/nextra/mistral/src/app/api/endpoint/batch/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/batch/jobs/page.mdx
@@ -156,6 +156,7 @@ OK
   id="data"
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout\">BatchJobOut</a>","children":[{"label":"BatchJobOut","linkedLabel":"<a href=\"#operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout\">BatchJobOut</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -171,7 +172,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_BatchJobOut"
-  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout" parentId="data"
+  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -202,6 +204,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_completed_at"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -277,6 +280,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_error_file"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -311,7 +315,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_BatchJobOut_errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror" parentId="data_BatchJobOut_errors"
+  headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror"
+  parentId="data_BatchJobOut_errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -342,6 +347,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_errors_batcherror_count"
   parentId="data_BatchJobOut_errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -442,6 +448,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_metadata"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -479,6 +486,7 @@ _Default Value:_ `1`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_object"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -503,6 +511,7 @@ _Default Value:_ `"batch"`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_output_file"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -521,6 +530,7 @@ _Default Value:_ `"batch"`
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_data_batchjobout_started_at"
   parentId="data_BatchJobOut"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -595,6 +605,7 @@ _Default Value:_ `"batch"`
   id="object"
   headingId="operation-jobs_api_routes_batch_get_batch_jobs_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"list\"","linkedLabel":"\"list\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -794,6 +805,7 @@ with Mistral(
   id="metadata"
   headingId="operation-jobs_api_routes_batch_create_batch_job_request_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -829,6 +841,7 @@ with Mistral(
   id="timeout_hours"
   headingId="operation-jobs_api_routes_batch_create_batch_job_request_timeout_hours"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -886,6 +899,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -957,6 +971,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -990,7 +1005,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1021,6 +1037,7 @@ OK
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_errors_batcherror_count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1117,6 +1134,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1152,6 +1170,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1175,6 +1194,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1192,6 +1212,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_create_batch_job_responses_200_application-json_started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1431,6 +1452,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1502,6 +1524,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1535,7 +1558,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1566,6 +1590,7 @@ OK
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_errors_batcherror_count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1662,6 +1687,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1697,6 +1723,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1720,6 +1747,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1737,6 +1765,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_get_batch_job_responses_200_application-json_started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1976,6 +2005,7 @@ OK
   id="completed_at"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_completed_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2047,6 +2077,7 @@ OK
   id="error_file"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_error_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2080,7 +2111,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="errors_BatchError"
-  headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror" parentId="errors"
+  headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror"
+  parentId="errors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2111,6 +2143,7 @@ OK
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_errors_batcherror_count"
   parentId="errors_BatchError"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2207,6 +2240,7 @@ _Default Value:_ `1`
   id="metadata"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_metadata"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2242,6 +2276,7 @@ _Default Value:_ `1`
   id="object"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_object"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2265,6 +2300,7 @@ _Default Value:_ `"batch"`
   id="output_file"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_output_file"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2282,6 +2318,7 @@ _Default Value:_ `"batch"`
   id="started_at"
   headingId="operation-jobs_api_routes_batch_cancel_batch_job_responses_200_application-json_started_at"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
