--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -151,6 +151,7 @@ with Mistral(
   id="max_tokens"
   headingId="operation-fim_completion_v1_fim_completions_post_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -168,6 +169,7 @@ with Mistral(
   id="min_tokens"
   headingId="operation-fim_completion_v1_fim_completions_post_request_min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -255,6 +257,7 @@ def
   id="random_seed"
   headingId="operation-fim_completion_v1_fim_completions_post_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -272,6 +275,7 @@ def
   id="stop"
   headingId="operation-fim_completion_v1_fim_completions_post_request_stop"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -295,6 +299,7 @@ Stop generation if this token is detected. Or if one of these tokens is detected
   id="stream"
   headingId="operation-fim_completion_v1_fim_completions_post_request_stream"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -324,6 +329,7 @@ _Default Value:_ `false`
   id="suffix"
   headingId="operation-fim_completion_v1_fim_completions_post_request_suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -351,6 +357,7 @@ return a+b
   id="temperature"
   headingId="operation-fim_completion_v1_fim_completions_post_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -368,6 +375,7 @@ return a+b
   id="top_p"
   headingId="operation-fim_completion_v1_fim_completions_post_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -447,7 +455,8 @@ Successful Response
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice" parentId="choices"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice"
+  parentId="choices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -555,6 +564,7 @@ _Example:_
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -570,7 +580,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_TextChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -620,6 +631,7 @@ _Example:_
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_textchunk_type"
   parentId="choices_ChatCompletionChoice_message_content_TextChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -641,7 +653,8 @@ _Default Value:_ `"text"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ImageURLChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -690,7 +703,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_image_url_imageurl" parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_image_url_imageurl"
+  parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -721,6 +735,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_image_url_imageurl_detail"
   parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -758,6 +773,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_imageurlchunk_type"
   parentId="choices_ChatCompletionChoice_message_content_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -779,7 +795,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -810,6 +827,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk_document_name"
   parentId="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -847,6 +865,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_documenturlchunk_type"
   parentId="choices_ChatCompletionChoice_message_content_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -868,7 +887,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_content_ReferenceChunk"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk" parentId="choices_ChatCompletionChoice_message_content"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk"
+  parentId="choices_ChatCompletionChoice_message_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -918,6 +938,7 @@ _Default Value:_ `"document_url"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_content_referencechunk_type"
   parentId="choices_ChatCompletionChoice_message_content_ReferenceChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -942,6 +963,7 @@ _Default Value:_ `"reference"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_prefix"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -972,6 +994,7 @@ _Default Value:_ `false`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_role"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"assistant\"","linkedLabel":"\"assistant\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -996,6 +1019,7 @@ _Default Value:_ `"assistant"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls"
   parentId="choices_ChatCompletionChoice_message"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1011,7 +1035,8 @@ _Default Value:_ `"assistant"`
 <ExpandableBreakout
   slot="entry"
   id="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
-  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall" parentId="choices_ChatCompletionChoice_message_tool_calls"
+  headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall"
+  parentId="choices_ChatCompletionChoice_message_tool_calls"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1099,6 +1124,7 @@ _Default Value:_ `"assistant"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall_id"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1123,6 +1149,7 @@ _Default Value:_ `"null"`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall_index"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1147,6 +1174,7 @@ _Default Value:_ `0`
   headingId="operation-fim_completion_v1_fim_completions_post_responses_200_application-json_choices_chatcompletionchoice_message_tool_calls_toolcall_type"
   parentId="choices_ChatCompletionChoice_message_tool_calls_ToolCall"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1503,6 +1531,7 @@ with Mistral(
   id="max_tokens"
   headingId="operation-stream_fim_request_max_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1520,6 +1549,7 @@ with Mistral(
   id="min_tokens"
   headingId="operation-stream_fim_request_min_tokens"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1607,6 +1637,7 @@ def
   id="random_seed"
   headingId="operation-stream_fim_request_random_seed"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1624,6 +1655,7 @@ def
   id="stop"
   headingId="operation-stream_fim_request_stop"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1647,6 +1679,7 @@ Stop generation if this token is detected. Or if one of these tokens is detected
   id="stream"
   headingId="operation-stream_fim_request_stream"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1670,6 +1703,7 @@ _Default Value:_ `true`
   id="suffix"
   headingId="operation-stream_fim_request_suffix"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1697,6 +1731,7 @@ return a+b
   id="temperature"
   headingId="operation-stream_fim_request_temperature"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1714,6 +1749,7 @@ return a+b
   id="top_p"
   headingId="operation-stream_fim_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1847,7 +1883,8 @@ A stream of FIM completion events
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice" parentId="CompletionEvent_data_choices"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice"
+  parentId="CompletionEvent_data_choices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1897,6 +1934,7 @@ A stream of FIM completion events
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1912,7 +1950,8 @@ A stream of FIM completion events
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_TextChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1962,6 +2001,7 @@ A stream of FIM completion events
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_textchunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_TextChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1983,7 +2023,8 @@ _Default Value:_ `"text"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2032,7 +2073,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_image_url_imageurl" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_image_url_imageurl"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2063,6 +2105,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_image_url_imageurl_detail"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2100,6 +2143,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_imageurlchunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2121,7 +2165,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2152,6 +2197,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk_document_name"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2189,6 +2235,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_documenturlchunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2210,7 +2257,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ReferenceChunk"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2260,6 +2308,7 @@ _Default Value:_ `"document_url"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_content_referencechunk_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_content_ReferenceChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2284,6 +2333,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_role"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2302,6 +2352,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2317,7 +2368,8 @@ _Default Value:_ `"reference"`
 <ExpandableBreakout
   slot="entry"
   id="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
-  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall" parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls"
+  headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall"
+  parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2405,6 +2457,7 @@ _Default Value:_ `"reference"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall_id"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2429,6 +2482,7 @@ _Default Value:_ `"null"`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall_index"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2453,6 +2507,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_choices_completionresponsestreamchoice_delta_tool_calls_toolcall_type"
   parentId="CompletionEvent_data_choices_CompletionResponseStreamChoice_delta_tool_calls_ToolCall"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2509,6 +2564,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_created"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2565,6 +2621,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_object"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2583,6 +2640,7 @@ _Default Value:_ `0`
   headingId="operation-stream_fim_responses_200_text-event-stream_completionevent_data_usage"
   parentId="CompletionEvent_data"
   typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-stream_fim_responses_200_text-event-stream_completionevent_data_usage_usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
