--- a/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -150,6 +150,7 @@ with Mistral(
   id="bbox_annotation_format"
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -165,7 +166,8 @@ with Mistral(
 <ExpandableBreakout
   slot="entry"
   id="bbox_annotation_format_ResponseFormat"
-  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat" parentId="bbox_annotation_format"
+  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat"
+  parentId="bbox_annotation_format"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -196,6 +198,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema"
   parentId="bbox_annotation_format_ResponseFormat"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -211,7 +214,8 @@ with Mistral(
 <ExpandableBreakout
   slot="entry"
   id="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
-  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema" parentId="bbox_annotation_format_ResponseFormat_json_schema"
+  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema"
+  parentId="bbox_annotation_format_ResponseFormat_json_schema"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -242,6 +246,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_description"
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -298,6 +303,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_strict"
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -316,6 +322,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_type"
   parentId="bbox_annotation_format_ResponseFormat"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_object\"","linkedLabel":"\"json_object\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_schema\"","linkedLabel":"\"json_schema\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -361,7 +368,8 @@ Document to run OCR on
 <ExpandableBreakout
   slot="entry"
   id="document_DocumentURLChunk"
-  headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk" parentId="document"
+  headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk"
+  parentId="document"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -392,6 +400,7 @@ Document to run OCR on
   headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk_document_name"
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -429,6 +438,7 @@ Document to run OCR on
   headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk_type"
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -450,7 +460,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_ImageURLChunk"
-  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk" parentId="document"
+  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk"
+  parentId="document"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -499,7 +510,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="document_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl" parentId="document_ImageURLChunk_image_url"
+  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl"
+  parentId="document_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -530,6 +542,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl_detail"
   parentId="document_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -567,6 +580,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_type"
   parentId="document_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -590,6 +604,7 @@ _Default Value:_ `"image_url"`
   id="document_annotation_format"
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -605,7 +620,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_annotation_format_ResponseFormat"
-  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat" parentId="document_annotation_format"
+  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat"
+  parentId="document_annotation_format"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -636,6 +652,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema"
   parentId="document_annotation_format_ResponseFormat"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -651,7 +668,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
-  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema" parentId="document_annotation_format_ResponseFormat_json_schema"
+  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema"
+  parentId="document_annotation_format_ResponseFormat_json_schema"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -682,6 +700,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_description"
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -738,6 +757,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_strict"
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -756,6 +776,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_type"
   parentId="document_annotation_format_ResponseFormat"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_object\"","linkedLabel":"\"json_object\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_schema\"","linkedLabel":"\"json_schema\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -779,6 +800,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="id"
   headingId="operation-ocr_v1_ocr_post_request_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -796,6 +818,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="image_limit"
   headingId="operation-ocr_v1_ocr_post_request_image_limit"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -813,6 +836,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="image_min_size"
   headingId="operation-ocr_v1_ocr_post_request_image_min_size"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -830,6 +854,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="include_image_base64"
   headingId="operation-ocr_v1_ocr_post_request_include_image_base64"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -865,6 +890,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="pages"
   headingId="operation-ocr_v1_ocr_post_request_pages"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"integer","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -916,6 +942,7 @@ Successful Response
   id="document_annotation"
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_document_annotation"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -979,7 +1006,8 @@ List of OCR info for pages.
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject"
-  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject" parentId="pages"
+  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject"
+  parentId="pages"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1026,7 +1054,8 @@ List of OCR info for pages.
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject_dimensions_OCRPageDimensions"
-  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions" parentId="pages_OCRPageObject_dimensions"
+  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions"
+  parentId="pages_OCRPageObject_dimensions"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1156,7 +1185,8 @@ List of all extracted images in the page
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject_images_OCRImageObject"
-  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject" parentId="pages_OCRPageObject_images"
+  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject"
+  parentId="pages_OCRPageObject_images"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1250,6 +1280,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_annotation"
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1268,6 +1299,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_base64"
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1392,6 +1424,7 @@ The markdown string response of the page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_doc_size_bytes"
   parentId="usage_info"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
