--- a/examples/nextra/pokeapi/src/app/api/endpoint/berries/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/berries/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_berry_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_berry_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_berry_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_berry_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_berry_list_responses_200_application-json_results_berrysummary\">BerrySummary</a>","children":[{"label":"BerrySummary","linkedLabel":"<a href=\"#operation-api_v2_berry_list_responses_200_application-json_results_berrysummary\">BerrySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_BerrySummary"
-  headingId="operation-api_v2_berry_list_responses_200_application-json_results_berrysummary" parentId="results"
+  headingId="operation-api_v2_berry_list_responses_200_application-json_results_berrysummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -616,7 +621,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="flavors_flavor"
-  headingId="operation-api_v2_berry_retrieve_responses_200_application-json_flavors_flavor" parentId="flavors"
+  headingId="operation-api_v2_berry_retrieve_responses_200_application-json_flavors_flavor"
+  parentId="flavors"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1132,6 +1138,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1159,6 +1166,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1186,6 +1194,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1213,6 +1222,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_berry_firmness_list_responses_200_application-json_results_berryfirmnesssummary\">BerryFirmnessSummary</a>","children":[{"label":"BerryFirmnessSummary","linkedLabel":"<a href=\"#operation-api_v2_berry_firmness_list_responses_200_application-json_results_berryfirmnesssummary\">BerryFirmnessSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1228,7 +1238,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_BerryFirmnessSummary"
-  headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_results_berryfirmnesssummary" parentId="results"
+  headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_results_berryfirmnesssummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1464,7 +1475,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="berries_BerrySummary"
-  headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_berries_berrysummary" parentId="berries"
+  headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_berries_berrysummary"
+  parentId="berries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1584,7 +1596,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_BerryFirmnessName"
-  headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_names_berryfirmnessname" parentId="names"
+  headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_names_berryfirmnessname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1891,6 +1904,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1918,6 +1932,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1945,6 +1960,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1972,6 +1988,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_berry_flavor_list_responses_200_application-json_results_berryflavorsummary\">BerryFlavorSummary</a>","children":[{"label":"BerryFlavorSummary","linkedLabel":"<a href=\"#operation-api_v2_berry_flavor_list_responses_200_application-json_results_berryflavorsummary\">BerryFlavorSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1987,7 +2004,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_BerryFlavorSummary"
-  headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_results_berryflavorsummary" parentId="results"
+  headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_results_berryflavorsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2223,7 +2241,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="berries_berry"
-  headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_berries_berry" parentId="berries"
+  headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_berries_berry"
+  parentId="berries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2390,7 +2409,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="names_BerryFlavorName"
-  headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_names_berryflavorname" parentId="names"
+  headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_names_berryflavorname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
