--- a/examples/nextra/pokeapi/src/app/api/endpoint/encounters/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/encounters/page.mdx
@@ -230,6 +230,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_encounter_method_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -257,6 +258,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_encounter_method_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -284,6 +286,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_encounter_method_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -311,6 +314,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_encounter_method_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary\">EncounterMethodSummary</a>","children":[{"label":"EncounterMethodSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary\">EncounterMethodSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -326,7 +330,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EncounterMethodSummary"
-  headingId="operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary" parentId="results"
+  headingId="operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -598,7 +603,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EncounterMethodName"
-  headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname" parentId="names"
+  headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -704,6 +710,7 @@ This parameter can be a string or an integer.
   id="order"
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_order"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -922,6 +929,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -949,6 +957,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -976,6 +985,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1003,6 +1013,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary\">EncounterConditionSummary</a>","children":[{"label":"EncounterConditionSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary\">EncounterConditionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1018,7 +1029,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EncounterConditionSummary"
-  headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary" parentId="results"
+  headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1290,7 +1302,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EncounterConditionName"
-  headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname" parentId="names"
+  headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1412,7 +1425,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="values_EncounterConditionValueSummary"
-  headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_values_encounterconditionvaluesummary" parentId="values"
+  headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_values_encounterconditionvaluesummary"
+  parentId="values"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1681,6 +1695,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1708,6 +1723,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1735,6 +1751,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1762,6 +1779,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[{"label":"EncounterConditionValueSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1777,7 +1795,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EncounterConditionValueSummary"
-  headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary" parentId="results"
+  headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2105,7 +2124,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EncounterConditionValueName"
-  headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename" parentId="names"
+  headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2485,7 +2505,8 @@ https://pokeapi.co/api/v2/location-area/281/
 <ExpandableBreakout
   slot="entry"
   id="ResponseBody_version_details_version_detail"
-  headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody_version_details_version_detail" parentId="ResponseBody_version_details"
+  headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody_version_details_version_detail"
+  parentId="ResponseBody_version_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2532,7 +2553,8 @@ https://pokeapi.co/api/v2/location-area/281/
 <ExpandableBreakout
   slot="entry"
   id="ResponseBody_version_details_version_detail_encounter_details_encounter_detail"
-  headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody_version_details_version_detail_encounter_details_encounter_detail" parentId="ResponseBody_version_details_version_detail_encounter_details"
+  headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody_version_details_version_detail_encounter_details_encounter_detail"
+  parentId="ResponseBody_version_details_version_detail_encounter_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2608,7 +2630,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="ResponseBody_version_details_version_detail_encounter_details_encounter_detail_condition_values_condition_value"
-  headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody_version_details_version_detail_encounter_details_encounter_detail_condition_values_condition_value" parentId="ResponseBody_version_details_version_detail_encounter_details_encounter_detail_condition_values"
+  headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody_version_details_version_detail_encounter_details_encounter_detail_condition_values_condition_value"
+  parentId="ResponseBody_version_details_version_detail_encounter_details_encounter_detail_condition_values"
   hasFrontMatter={false}
   expandByDefault={false}
 >
