--- a/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_generation_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_generation_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_generation_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_generation_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_list_responses_200_application-json_results_generationsummary\">GenerationSummary</a>","children":[{"label":"GenerationSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_list_responses_200_application-json_results_generationsummary\">GenerationSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_GenerationSummary"
-  headingId="operation-api_v2_generation_list_responses_200_application-json_results_generationsummary" parentId="results"
+  headingId="operation-api_v2_generation_list_responses_200_application-json_results_generationsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -561,7 +566,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="abilities_AbilitySummary"
-  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_abilities_abilitysummary" parentId="abilities"
+  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_abilities_abilitysummary"
+  parentId="abilities"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -719,7 +725,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_MoveSummary"
-  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_moves_movesummary" parentId="moves"
+  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_moves_movesummary"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -821,7 +828,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_GenerationName"
-  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname" parentId="names"
+  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -943,7 +951,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_species_PokemonSpeciesSummary"
-  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_pokemon_species_pokemonspeciessummary" parentId="pokemon_species"
+  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_pokemon_species_pokemonspeciessummary"
+  parentId="pokemon_species"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1027,7 +1036,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="types_TypeSummary"
-  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_types_typesummary" parentId="types"
+  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_types_typesummary"
+  parentId="types"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1111,7 +1121,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="version_groups_VersionGroupSummary"
-  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_version_groups_versiongroupsummary" parentId="version_groups"
+  headingId="operation-api_v2_generation_retrieve_responses_200_application-json_version_groups_versiongroupsummary"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1380,6 +1391,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_pokedex_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1407,6 +1419,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_pokedex_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1434,6 +1447,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_pokedex_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1461,6 +1475,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_pokedex_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary\">PokedexSummary</a>","children":[{"label":"PokedexSummary","linkedLabel":"<a href=\"#operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary\">PokedexSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1476,7 +1491,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_PokedexSummary"
-  headingId="operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary" parentId="results"
+  headingId="operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1712,7 +1728,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_PokedexDescription"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription" parentId="descriptions"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1743,6 +1760,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription_description"
   parentId="descriptions_PokedexDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1835,6 +1853,7 @@ This parameter can be a string or an integer.
   id="is_main_series"
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_is_main_series"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1886,7 +1905,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_PokedexName"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname" parentId="names"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2008,7 +2028,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_entries_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_pokemon_entries_pokemon_entry" parentId="pokemon_entries"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_pokemon_entries_pokemon_entry"
+  parentId="pokemon_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2216,7 +2237,8 @@ https://pokeapi.co/api/v2/pokemon-species/1/
 <ExpandableBreakout
   slot="entry"
   id="version_groups_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry" parentId="version_groups"
+  headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2553,6 +2575,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_version_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2580,6 +2603,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_version_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2607,6 +2631,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_version_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2634,6 +2659,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_version_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_list_responses_200_application-json_results_versionsummary\">VersionSummary</a>","children":[{"label":"VersionSummary","linkedLabel":"<a href=\"#operation-api_v2_version_list_responses_200_application-json_results_versionsummary\">VersionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2649,7 +2675,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_VersionSummary"
-  headingId="operation-api_v2_version_list_responses_200_application-json_results_versionsummary" parentId="results"
+  headingId="operation-api_v2_version_list_responses_200_application-json_results_versionsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2929,7 +2956,8 @@ not sure how to add anything other than a hyperlink
 <ExpandableBreakout
   slot="entry"
   id="names_VersionName"
-  headingId="operation-api_v2_version_retrieve_responses_200_application-json_names_versionname" parentId="names"
+  headingId="operation-api_v2_version_retrieve_responses_200_application-json_names_versionname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3292,6 +3320,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_version_group_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3319,6 +3348,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_version_group_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3346,6 +3376,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_version_group_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3373,6 +3404,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_version_group_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary\">VersionGroupSummary</a>","children":[{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3388,7 +3420,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_VersionGroupSummary"
-  headingId="operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary" parentId="results"
+  headingId="operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3698,7 +3731,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="move_learn_methods_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_move_learn_methods_move_learn_method" parentId="move_learn_methods"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_move_learn_methods_move_learn_method"
+  parentId="move_learn_methods"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3804,6 +3838,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   id="order"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_order"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3837,7 +3872,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 <ExpandableBreakout
   slot="entry"
   id="pokedexes_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method" parentId="pokedexes"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method"
+  parentId="pokedexes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3941,7 +3977,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 <ExpandableBreakout
   slot="entry"
   id="regions_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method" parentId="regions"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method"
+  parentId="regions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4045,7 +4082,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 <ExpandableBreakout
   slot="entry"
   id="versions_VersionSummary"
-  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_versions_versionsummary" parentId="versions"
+  headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_versions_versionsummary"
+  parentId="versions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
