--- a/examples/nextra/pokeapi/src/app/api/endpoint/items/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/items/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_list_responses_200_application-json_results_itemsummary\">ItemSummary</a>","children":[{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_item_list_responses_200_application-json_results_itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemSummary"
-  headingId="operation-api_v2_item_list_responses_200_application-json_results_itemsummary" parentId="results"
+  headingId="operation-api_v2_item_list_responses_200_application-json_results_itemsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -560,7 +565,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="attributes_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_attributes_attribute" parentId="attributes"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_attributes_attribute"
+  parentId="attributes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -780,6 +786,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="cost"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_cost"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -813,7 +820,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_ItemEffectText"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext" parentId="effect_entries"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -954,7 +962,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_ItemFlavorText"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_flavor_text_entries_itemflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_flavor_text_entries_itemflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1173,6 +1182,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="fling_power"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_fling_power"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1206,7 +1216,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="game_indices_ItemGameIndex"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_game_indices_itemgameindex" parentId="game_indices"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_game_indices_itemgameindex"
+  parentId="game_indices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1328,7 +1339,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="held_by_pokemon_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute" parentId="held_by_pokemon"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_held_by_pokemon_attribute"
+  parentId="held_by_pokemon"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1450,7 +1462,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="machines_attribute"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute" parentId="machines"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_machines_attribute"
+  parentId="machines"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1572,7 +1585,8 @@ https://pokeapi.co/api/v2/item-attribute/1/
 <ExpandableBreakout
   slot="entry"
   id="names_ItemName"
-  headingId="operation-api_v2_item_retrieve_responses_200_application-json_names_itemname" parentId="names"
+  headingId="operation-api_v2_item_retrieve_responses_200_application-json_names_itemname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1955,6 +1969,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_category_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1982,6 +1997,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_category_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2009,6 +2025,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_category_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2036,6 +2053,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_category_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_category_list_responses_200_application-json_results_itemcategorysummary\">ItemCategorySummary</a>","children":[{"label":"ItemCategorySummary","linkedLabel":"<a href=\"#operation-api_v2_item_category_list_responses_200_application-json_results_itemcategorysummary\">ItemCategorySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2051,7 +2069,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemCategorySummary"
-  headingId="operation-api_v2_item_category_list_responses_200_application-json_results_itemcategorysummary" parentId="results"
+  headingId="operation-api_v2_item_category_list_responses_200_application-json_results_itemcategorysummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2305,7 +2324,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="items_ItemSummary"
-  headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_items_itemsummary" parentId="items"
+  headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_items_itemsummary"
+  parentId="items"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2407,7 +2427,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_ItemCategoryName"
-  headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_names_itemcategoryname" parentId="names"
+  headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_names_itemcategoryname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2770,6 +2791,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_attribute_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2797,6 +2819,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_attribute_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2824,6 +2847,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_attribute_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2851,6 +2875,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_attribute_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_attribute_list_responses_200_application-json_results_itemattributesummary\">ItemAttributeSummary</a>","children":[{"label":"ItemAttributeSummary","linkedLabel":"<a href=\"#operation-api_v2_item_attribute_list_responses_200_application-json_results_itemattributesummary\">ItemAttributeSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2866,7 +2891,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemAttributeSummary"
-  headingId="operation-api_v2_item_attribute_list_responses_200_application-json_results_itemattributesummary" parentId="results"
+  headingId="operation-api_v2_item_attribute_list_responses_200_application-json_results_itemattributesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3102,7 +3128,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_ItemAttributeDescription"
-  headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription" parentId="descriptions"
+  headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3133,6 +3160,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription_description"
   parentId="descriptions_ItemAttributeDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3241,7 +3269,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="items_item"
-  headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_items_item" parentId="items"
+  headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_items_item"
+  parentId="items"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3363,7 +3392,8 @@ https://pokeapi.co/api/v2/item/1/
 <ExpandableBreakout
   slot="entry"
   id="names_ItemAttributeName"
-  headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_names_itemattributename" parentId="names"
+  headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_names_itemattributename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3670,6 +3700,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3697,6 +3728,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3724,6 +3756,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3751,6 +3784,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_fling_effect_list_responses_200_application-json_results_itemflingeffectsummary\">ItemFlingEffectSummary</a>","children":[{"label":"ItemFlingEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_item_fling_effect_list_responses_200_application-json_results_itemflingeffectsummary\">ItemFlingEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3766,7 +3800,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemFlingEffectSummary"
-  headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_results_itemflingeffectsummary" parentId="results"
+  headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_results_itemflingeffectsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4002,7 +4037,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_ItemFlingEffectEffectText"
-  headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_effect_entries_itemflingeffecteffecttext" parentId="effect_entries"
+  headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_effect_entries_itemflingeffecteffecttext"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4142,7 +4178,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="items_ItemSummary"
-  headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_items_itemsummary" parentId="items"
+  headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_items_itemsummary"
+  parentId="items"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4429,6 +4466,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_item_pocket_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4456,6 +4494,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_item_pocket_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4483,6 +4522,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_item_pocket_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4510,6 +4550,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_item_pocket_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_item_pocket_list_responses_200_application-json_results_itempocketsummary\">ItemPocketSummary</a>","children":[{"label":"ItemPocketSummary","linkedLabel":"<a href=\"#operation-api_v2_item_pocket_list_responses_200_application-json_results_itempocketsummary\">ItemPocketSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4525,7 +4566,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ItemPocketSummary"
-  headingId="operation-api_v2_item_pocket_list_responses_200_application-json_results_itempocketsummary" parentId="results"
+  headingId="operation-api_v2_item_pocket_list_responses_200_application-json_results_itempocketsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4761,7 +4803,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="categories_ItemCategorySummary"
-  headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_categories_itemcategorysummary" parentId="categories"
+  headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_categories_itemcategorysummary"
+  parentId="categories"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4881,7 +4924,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_ItemPocketName"
-  headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_names_itempocketname" parentId="names"
+  headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_names_itempocketname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
