--- a/examples/nextra/pokeapi/src/app/api/endpoint/location/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/location/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_location_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_location_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_location_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_location_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_list_responses_200_application-json_results_locationsummary\">LocationSummary</a>","children":[{"label":"LocationSummary","linkedLabel":"<a href=\"#operation-api_v2_location_list_responses_200_application-json_results_locationsummary\">LocationSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_LocationSummary"
-  headingId="operation-api_v2_location_list_responses_200_application-json_results_locationsummary" parentId="results"
+  headingId="operation-api_v2_location_list_responses_200_application-json_results_locationsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -560,7 +565,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="areas_LocationAreaSummary"
-  headingId="operation-api_v2_location_retrieve_responses_200_application-json_areas_locationareasummary" parentId="areas"
+  headingId="operation-api_v2_location_retrieve_responses_200_application-json_areas_locationareasummary"
+  parentId="areas"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -644,7 +650,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="game_indices_LocationGameIndex"
-  headingId="operation-api_v2_location_retrieve_responses_200_application-json_game_indices_locationgameindex" parentId="game_indices"
+  headingId="operation-api_v2_location_retrieve_responses_200_application-json_game_indices_locationgameindex"
+  parentId="game_indices"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -802,7 +809,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_LocationName"
-  headingId="operation-api_v2_location_retrieve_responses_200_application-json_names_locationname" parentId="names"
+  headingId="operation-api_v2_location_retrieve_responses_200_application-json_names_locationname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1140,6 +1148,7 @@ The initial index from which to return the results.
   id="count"
   headingId="operation-api_v2_location_area_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1167,6 +1176,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_location_area_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1194,6 +1204,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_location_area_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1221,6 +1232,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_location_area_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_location_area_list_responses_200_application-json_results_locationareasummary\">LocationAreaSummary</a>","children":[{"label":"LocationAreaSummary","linkedLabel":"<a href=\"#operation-api_v2_location_area_list_responses_200_application-json_results_locationareasummary\">LocationAreaSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1236,7 +1248,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_LocationAreaSummary"
-  headingId="operation-api_v2_location_area_list_responses_200_application-json_results_locationareasummary" parentId="results"
+  headingId="operation-api_v2_location_area_list_responses_200_application-json_results_locationareasummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1472,7 +1485,8 @@ A unique integer value identifying this location area.
 <ExpandableBreakout
   slot="entry"
   id="encounter_method_rates_encounter_method_rate"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate" parentId="encounter_method_rates"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate"
+  parentId="encounter_method_rates"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1596,7 +1610,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="encounter_method_rates_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method" parentId="encounter_method_rates_encounter_method_rate_version_details"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_encounter_method_rates_encounter_method_rate_version_details_encounter_method"
+  parentId="encounter_method_rates_encounter_method_rate_version_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1810,7 +1825,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="names_LocationAreaName"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_names_locationareaname" parentId="names"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_names_locationareaname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1932,7 +1948,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="pokemon_encounters_encounter_method_rate"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate" parentId="pokemon_encounters"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate"
+  parentId="pokemon_encounters"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2056,7 +2073,8 @@ https://pokeapi.co/api/v2/encounter-method/2/
 <ExpandableBreakout
   slot="entry"
   id="pokemon_encounters_encounter_method_rate_version_details_encounter_method"
-  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method" parentId="pokemon_encounters_encounter_method_rate_version_details"
+  headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_pokemon_encounters_encounter_method_rate_version_details_encounter_method"
+  parentId="pokemon_encounters_encounter_method_rate_version_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2345,6 +2363,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2372,6 +2391,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2399,6 +2419,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2426,6 +2447,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pal_park_area_list_responses_200_application-json_results_palparkareasummary\">PalParkAreaSummary</a>","children":[{"label":"PalParkAreaSummary","linkedLabel":"<a href=\"#operation-api_v2_pal_park_area_list_responses_200_application-json_results_palparkareasummary\">PalParkAreaSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2441,7 +2463,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_PalParkAreaSummary"
-  headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_results_palparkareasummary" parentId="results"
+  headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_results_palparkareasummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2713,7 +2736,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_PalParkAreaName"
-  headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_names_palparkareaname" parentId="names"
+  headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_names_palparkareaname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2835,7 +2859,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_encounters_pokemon_encounter"
-  headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter" parentId="pokemon_encounters"
+  headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_pokemon_encounters_pokemon_encounter"
+  parentId="pokemon_encounters"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3201,6 +3226,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_region_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3228,6 +3254,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_region_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3255,6 +3282,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_region_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3282,6 +3310,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_region_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_region_list_responses_200_application-json_results_regionsummary\">RegionSummary</a>","children":[{"label":"RegionSummary","linkedLabel":"<a href=\"#operation-api_v2_region_list_responses_200_application-json_results_regionsummary\">RegionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3297,7 +3326,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_RegionSummary"
-  headingId="operation-api_v2_region_list_responses_200_application-json_results_regionsummary" parentId="results"
+  headingId="operation-api_v2_region_list_responses_200_application-json_results_regionsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3551,7 +3581,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="locations_LocationSummary"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_locations_locationsummary" parentId="locations"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_locations_locationsummary"
+  parentId="locations"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3709,7 +3740,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_RegionName"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_names_regionname" parentId="names"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_names_regionname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3831,7 +3863,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokedexes_PokedexSummary"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_pokedexes_pokedexsummary" parentId="pokedexes"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_pokedexes_pokedexsummary"
+  parentId="pokedexes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3915,7 +3948,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="version_groups_main_generation"
-  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation" parentId="version_groups"
+  headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
