--- a/examples/nextra/pokeapi/src/app/api/endpoint/moves/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/moves/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_list_responses_200_application-json_results_movesummary\">MoveSummary</a>","children":[{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_move_list_responses_200_application-json_results_movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveSummary"
-  headingId="operation-api_v2_move_list_responses_200_application-json_results_movesummary" parentId="results"
+  headingId="operation-api_v2_move_list_responses_200_application-json_results_movesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -544,6 +549,7 @@ This parameter can be a string or an integer.
   id="accuracy"
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_accuracy"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -615,7 +621,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_contest_combos_normal_use_after_use_before" parentId="contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_contest_combos_normal_use_after_use_before"
+  parentId="contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -758,7 +765,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_contest_combos_super_use_after_use_before" parentId="contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_contest_combos_super_use_after_use_before"
+  parentId="contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1048,7 +1056,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_changes_contest_combos"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_changes_contest_combos" parentId="effect_changes"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_changes_contest_combos"
+  parentId="effect_changes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1114,7 +1123,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_changes_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_changes_contest_combos_normal_use_after_use_before" parentId="effect_changes_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_changes_contest_combos_normal_use_after_use_before"
+  parentId="effect_changes_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1257,7 +1267,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_changes_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_changes_contest_combos_super_use_after_use_before" parentId="effect_changes_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_changes_contest_combos_super_use_after_use_before"
+  parentId="effect_changes_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1380,7 +1391,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_contest_combos"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_entries_contest_combos" parentId="effect_entries"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_entries_contest_combos"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1446,7 +1458,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_entries_contest_combos_normal_use_after_use_before" parentId="effect_entries_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_entries_contest_combos_normal_use_after_use_before"
+  parentId="effect_entries_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1589,7 +1602,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_entries_contest_combos_super_use_after_use_before" parentId="effect_entries_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_effect_entries_contest_combos_super_use_after_use_before"
+  parentId="effect_entries_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1712,7 +1726,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_MoveFlavorText"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_flavor_text_entries_moveflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_flavor_text_entries_moveflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1965,7 +1980,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="learned_by_pokemon_contest_combos"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_learned_by_pokemon_contest_combos" parentId="learned_by_pokemon"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_learned_by_pokemon_contest_combos"
+  parentId="learned_by_pokemon"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2031,7 +2047,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="learned_by_pokemon_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_learned_by_pokemon_contest_combos_normal_use_after_use_before" parentId="learned_by_pokemon_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_learned_by_pokemon_contest_combos_normal_use_after_use_before"
+  parentId="learned_by_pokemon_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2174,7 +2191,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="learned_by_pokemon_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_learned_by_pokemon_contest_combos_super_use_after_use_before" parentId="learned_by_pokemon_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_learned_by_pokemon_contest_combos_super_use_after_use_before"
+  parentId="learned_by_pokemon_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2297,7 +2315,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="machines_contest_combos"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_machines_contest_combos" parentId="machines"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_machines_contest_combos"
+  parentId="machines"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2363,7 +2382,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="machines_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_machines_contest_combos_normal_use_after_use_before" parentId="machines_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_machines_contest_combos_normal_use_after_use_before"
+  parentId="machines_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2506,7 +2526,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="machines_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_machines_contest_combos_super_use_after_use_before" parentId="machines_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_machines_contest_combos_super_use_after_use_before"
+  parentId="machines_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2667,7 +2688,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="meta_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_meta_normal_use_after_use_before" parentId="meta_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_meta_normal_use_after_use_before"
+  parentId="meta_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2810,7 +2832,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="meta_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_meta_super_use_after_use_before" parentId="meta_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_meta_super_use_after_use_before"
+  parentId="meta_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2951,7 +2974,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="names_MoveName"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_names_movename" parentId="names"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_names_movename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3073,7 +3097,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="past_values_MoveChange"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange" parentId="past_values"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange"
+  parentId="past_values"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3104,6 +3129,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_accuracy"
   parentId="past_values_MoveChange"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3157,7 +3183,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="past_values_MoveChange_effect_entries_effect_entry"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_effect_entries_effect_entry" parentId="past_values_MoveChange_effect_entries"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_effect_entries_effect_entry"
+  parentId="past_values_MoveChange_effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3323,6 +3350,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_power"
   parentId="past_values_MoveChange"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3341,6 +3369,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_pp"
   parentId="past_values_MoveChange"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3472,6 +3501,7 @@ Inflicts regular damage with no additional effect.
   id="power"
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_power"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3489,6 +3519,7 @@ Inflicts regular damage with no additional effect.
   id="pp"
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_pp"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3506,6 +3537,7 @@ Inflicts regular damage with no additional effect.
   id="priority"
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_priority"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3539,7 +3571,8 @@ Inflicts regular damage with no additional effect.
 <ExpandableBreakout
   slot="entry"
   id="stat_changes_contest_combos"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_stat_changes_contest_combos" parentId="stat_changes"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_stat_changes_contest_combos"
+  parentId="stat_changes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3605,7 +3638,8 @@ Inflicts regular damage with no additional effect.
 <ExpandableBreakout
   slot="entry"
   id="stat_changes_contest_combos_normal_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_stat_changes_contest_combos_normal_use_after_use_before" parentId="stat_changes_contest_combos_normal_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_stat_changes_contest_combos_normal_use_after_use_before"
+  parentId="stat_changes_contest_combos_normal_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3748,7 +3782,8 @@ https://pokeapi.co/api/v2/move/7/
 <ExpandableBreakout
   slot="entry"
   id="stat_changes_contest_combos_super_use_after_use_before"
-  headingId="operation-api_v2_move_retrieve_responses_200_application-json_stat_changes_contest_combos_super_use_after_use_before" parentId="stat_changes_contest_combos_super_use_after"
+  headingId="operation-api_v2_move_retrieve_responses_200_application-json_stat_changes_contest_combos_super_use_after_use_before"
+  parentId="stat_changes_contest_combos_super_use_after"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4205,6 +4240,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_ailment_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4232,6 +4268,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_ailment_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4259,6 +4296,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_ailment_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4286,6 +4324,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_ailment_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_ailment_list_responses_200_application-json_results_movemetaailmentsummary\">MoveMetaAilmentSummary</a>","children":[{"label":"MoveMetaAilmentSummary","linkedLabel":"<a href=\"#operation-api_v2_move_ailment_list_responses_200_application-json_results_movemetaailmentsummary\">MoveMetaAilmentSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4301,7 +4340,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveMetaAilmentSummary"
-  headingId="operation-api_v2_move_ailment_list_responses_200_application-json_results_movemetaailmentsummary" parentId="results"
+  headingId="operation-api_v2_move_ailment_list_responses_200_application-json_results_movemetaailmentsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4555,7 +4595,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_move"
-  headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_moves_move" parentId="moves"
+  headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_moves_move"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4677,7 +4718,8 @@ https://pokeapi.co/api/v2/move/9/
 <ExpandableBreakout
   slot="entry"
   id="names_MoveMetaAilmentName"
-  headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_names_movemetaailmentname" parentId="names"
+  headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_names_movemetaailmentname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4984,6 +5026,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5011,6 +5054,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5038,6 +5082,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5065,6 +5110,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_battle_style_list_responses_200_application-json_results_movebattlestylesummary\">MoveBattleStyleSummary</a>","children":[{"label":"MoveBattleStyleSummary","linkedLabel":"<a href=\"#operation-api_v2_move_battle_style_list_responses_200_application-json_results_movebattlestylesummary\">MoveBattleStyleSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5080,7 +5126,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveBattleStyleSummary"
-  headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_results_movebattlestylesummary" parentId="results"
+  headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_results_movebattlestylesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5352,7 +5399,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_MoveBattleStyleName"
-  headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_names_movebattlestylename" parentId="names"
+  headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_names_movebattlestylename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5659,6 +5707,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_category_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5686,6 +5735,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_category_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5713,6 +5763,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_category_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5740,6 +5791,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_category_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_category_list_responses_200_application-json_results_movemetacategorysummary\">MoveMetaCategorySummary</a>","children":[{"label":"MoveMetaCategorySummary","linkedLabel":"<a href=\"#operation-api_v2_move_category_list_responses_200_application-json_results_movemetacategorysummary\">MoveMetaCategorySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5755,7 +5807,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveMetaCategorySummary"
-  headingId="operation-api_v2_move_category_list_responses_200_application-json_results_movemetacategorysummary" parentId="results"
+  headingId="operation-api_v2_move_category_list_responses_200_application-json_results_movemetacategorysummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5991,7 +6044,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_MoveMetaCategoryDescription"
-  headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription" parentId="descriptions"
+  headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6022,6 +6076,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription_description"
   parentId="descriptions_MoveMetaCategoryDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6130,7 +6185,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_move"
-  headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_moves_move" parentId="moves"
+  headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_moves_move"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6437,6 +6493,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6464,6 +6521,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6491,6 +6549,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6518,6 +6577,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_learn_method_list_responses_200_application-json_results_movelearnmethodsummary\">MoveLearnMethodSummary</a>","children":[{"label":"MoveLearnMethodSummary","linkedLabel":"<a href=\"#operation-api_v2_move_learn_method_list_responses_200_application-json_results_movelearnmethodsummary\">MoveLearnMethodSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6533,7 +6593,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveLearnMethodSummary"
-  headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_results_movelearnmethodsummary" parentId="results"
+  headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_results_movelearnmethodsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6769,7 +6830,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_MoveLearnMethodDescription"
-  headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription" parentId="descriptions"
+  headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6800,6 +6862,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription_description"
   parentId="descriptions_MoveLearnMethodDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6926,7 +6989,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_MoveLearnMethodName"
-  headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_names_movelearnmethodname" parentId="names"
+  headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_names_movelearnmethodname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7048,7 +7112,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="version_groups_version_group"
-  headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_version_groups_version_group" parentId="version_groups"
+  headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_version_groups_version_group"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7337,6 +7402,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_move_target_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7364,6 +7430,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_move_target_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7391,6 +7458,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_move_target_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7418,6 +7486,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_move_target_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_move_target_list_responses_200_application-json_results_movetargetsummary\">MoveTargetSummary</a>","children":[{"label":"MoveTargetSummary","linkedLabel":"<a href=\"#operation-api_v2_move_target_list_responses_200_application-json_results_movetargetsummary\">MoveTargetSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7433,7 +7502,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MoveTargetSummary"
-  headingId="operation-api_v2_move_target_list_responses_200_application-json_results_movetargetsummary" parentId="results"
+  headingId="operation-api_v2_move_target_list_responses_200_application-json_results_movetargetsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7669,7 +7739,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_MoveTargetDescription"
-  headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription" parentId="descriptions"
+  headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7700,6 +7771,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription_description"
   parentId="descriptions_MoveTargetDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7808,7 +7880,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_MoveSummary"
-  headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_moves_movesummary" parentId="moves"
+  headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_moves_movesummary"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7910,7 +7983,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_MoveTargetName"
-  headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_names_movetargetname" parentId="names"
+  headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_names_movetargetname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
