--- a/examples/custom/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/custom/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -146,6 +146,7 @@ with Mistral(
   id="bbox_annotation_format"
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -161,7 +162,8 @@ with Mistral(
 <ExpandableBreakout
   slot="entry"
   id="bbox_annotation_format_ResponseFormat"
-  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat" parentId="bbox_annotation_format"
+  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat"
+  parentId="bbox_annotation_format"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -192,6 +194,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema"
   parentId="bbox_annotation_format_ResponseFormat"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -207,7 +210,8 @@ with Mistral(
 <ExpandableBreakout
   slot="entry"
   id="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
-  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema" parentId="bbox_annotation_format_ResponseFormat_json_schema"
+  headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema"
+  parentId="bbox_annotation_format_ResponseFormat_json_schema"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -238,6 +242,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_description"
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -294,6 +299,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_json_schema_jsonschema_strict"
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -312,6 +318,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post_request_bbox_annotation_format_responseformat_type"
   parentId="bbox_annotation_format_ResponseFormat"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_object\"","linkedLabel":"\"json_object\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_schema\"","linkedLabel":"\"json_schema\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -357,7 +364,8 @@ Document to run OCR on
 <ExpandableBreakout
   slot="entry"
   id="document_DocumentURLChunk"
-  headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk" parentId="document"
+  headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk"
+  parentId="document"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -388,6 +396,7 @@ Document to run OCR on
   headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk_document_name"
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -425,6 +434,7 @@ Document to run OCR on
   headingId="operation-ocr_v1_ocr_post_request_document_documenturlchunk_type"
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -446,7 +456,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_ImageURLChunk"
-  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk" parentId="document"
+  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk"
+  parentId="document"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -495,7 +506,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="document_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl" parentId="document_ImageURLChunk_image_url"
+  headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl"
+  parentId="document_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -526,6 +538,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_image_url_imageurl_detail"
   parentId="document_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -563,6 +576,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-ocr_v1_ocr_post_request_document_imageurlchunk_type"
   parentId="document_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -586,6 +600,7 @@ _Default Value:_ `"image_url"`
   id="document_annotation_format"
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -601,7 +616,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_annotation_format_ResponseFormat"
-  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat" parentId="document_annotation_format"
+  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat"
+  parentId="document_annotation_format"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -632,6 +648,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema"
   parentId="document_annotation_format_ResponseFormat"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -647,7 +664,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
-  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema" parentId="document_annotation_format_ResponseFormat_json_schema"
+  headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema"
+  parentId="document_annotation_format_ResponseFormat_json_schema"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -678,6 +696,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_description"
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -734,6 +753,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_json_schema_jsonschema_strict"
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -752,6 +772,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post_request_document_annotation_format_responseformat_type"
   parentId="document_annotation_format_ResponseFormat"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_object\"","linkedLabel":"\"json_object\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_schema\"","linkedLabel":"\"json_schema\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -775,6 +796,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="id"
   headingId="operation-ocr_v1_ocr_post_request_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -792,6 +814,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="image_limit"
   headingId="operation-ocr_v1_ocr_post_request_image_limit"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -809,6 +832,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="image_min_size"
   headingId="operation-ocr_v1_ocr_post_request_image_min_size"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -826,6 +850,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="include_image_base64"
   headingId="operation-ocr_v1_ocr_post_request_include_image_base64"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -861,6 +886,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="pages"
   headingId="operation-ocr_v1_ocr_post_request_pages"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"integer","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -912,6 +938,7 @@ Successful Response
   id="document_annotation"
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_document_annotation"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -975,7 +1002,8 @@ List of OCR info for pages.
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject"
-  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject" parentId="pages"
+  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject"
+  parentId="pages"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1022,7 +1050,8 @@ List of OCR info for pages.
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject_dimensions_OCRPageDimensions"
-  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions" parentId="pages_OCRPageObject_dimensions"
+  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions"
+  parentId="pages_OCRPageObject_dimensions"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1152,7 +1181,8 @@ List of all extracted images in the page
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject_images_OCRImageObject"
-  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject" parentId="pages_OCRPageObject_images"
+  headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject"
+  parentId="pages_OCRPageObject_images"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1246,6 +1276,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_annotation"
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1264,6 +1295,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_images_ocrimageobject_image_base64"
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1388,6 +1420,7 @@ The markdown string response of the page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_doc_size_bytes"
   parentId="usage_info"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
