--- a/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
@@ -176,7 +176,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_FileSchema"
-  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema" parentId="data"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -312,6 +313,7 @@ _Example:_
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+num_lines"
   parentId="data_FileSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -686,6 +688,7 @@ The File object (not file name) to be uploaded.
   id="purpose"
   headingId="operation-files_api_routes_upload_file+request+purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -839,6 +842,7 @@ _Example:_
   id="num_lines"
   headingId="operation-files_api_routes_upload_file+responses+200+application-json+num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1266,6 +1270,7 @@ _Example:_
   id="num_lines"
   headingId="operation-files_api_routes_retrieve_file+responses+200+application-json+num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
