--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -151,6 +151,7 @@ with Mistral(
   id="bbox_annotation_format"
   headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -166,7 +167,8 @@ with Mistral(
 <ExpandableBreakout
   slot="entry"
   id="bbox_annotation_format_ResponseFormat"
-  headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat" parentId="bbox_annotation_format"
+  headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat"
+  parentId="bbox_annotation_format"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -197,6 +199,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+json_schema"
   parentId="bbox_annotation_format_ResponseFormat"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+json_schema+jsonschema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -212,7 +215,8 @@ with Mistral(
 <ExpandableBreakout
   slot="entry"
   id="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
-  headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+json_schema+jsonschema" parentId="bbox_annotation_format_ResponseFormat_json_schema"
+  headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+json_schema+jsonschema"
+  parentId="bbox_annotation_format_ResponseFormat_json_schema"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -243,6 +247,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+json_schema+jsonschema+description"
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -299,6 +304,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+json_schema+jsonschema+strict"
   parentId="bbox_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -317,6 +323,7 @@ with Mistral(
   headingId="operation-ocr_v1_ocr_post+request+bbox_annotation_format+responseformat+type"
   parentId="bbox_annotation_format_ResponseFormat"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_object\"","linkedLabel":"\"json_object\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_schema\"","linkedLabel":"\"json_schema\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -362,7 +369,8 @@ Document to run OCR on
 <ExpandableBreakout
   slot="entry"
   id="document_DocumentURLChunk"
-  headingId="operation-ocr_v1_ocr_post+request+document+documenturlchunk" parentId="document"
+  headingId="operation-ocr_v1_ocr_post+request+document+documenturlchunk"
+  parentId="document"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -393,6 +401,7 @@ Document to run OCR on
   headingId="operation-ocr_v1_ocr_post+request+document+documenturlchunk+document_name"
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -430,6 +439,7 @@ Document to run OCR on
   headingId="operation-ocr_v1_ocr_post+request+document+documenturlchunk+type"
   parentId="document_DocumentURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -451,7 +461,8 @@ _Default Value:_ `"document_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_ImageURLChunk"
-  headingId="operation-ocr_v1_ocr_post+request+document+imageurlchunk" parentId="document"
+  headingId="operation-ocr_v1_ocr_post+request+document+imageurlchunk"
+  parentId="document"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -500,7 +511,8 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 <ExpandableBreakout
   slot="entry"
   id="document_ImageURLChunk_image_url_ImageURL"
-  headingId="operation-ocr_v1_ocr_post+request+document+imageurlchunk+image_url+imageurl" parentId="document_ImageURLChunk_image_url"
+  headingId="operation-ocr_v1_ocr_post+request+document+imageurlchunk+image_url+imageurl"
+  parentId="document_ImageURLChunk_image_url"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -531,6 +543,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-ocr_v1_ocr_post+request+document+imageurlchunk+image_url+imageurl+detail"
   parentId="document_ImageURLChunk_image_url_ImageURL"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -568,6 +581,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
   headingId="operation-ocr_v1_ocr_post+request+document+imageurlchunk+type"
   parentId="document_ImageURLChunk"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -591,6 +605,7 @@ _Default Value:_ `"image_url"`
   id="document_annotation_format"
   headingId="operation-ocr_v1_ocr_post+request+document_annotation_format"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -606,7 +621,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_annotation_format_ResponseFormat"
-  headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat" parentId="document_annotation_format"
+  headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat"
+  parentId="document_annotation_format"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -637,6 +653,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+json_schema"
   parentId="document_annotation_format_ResponseFormat"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+json_schema+jsonschema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -652,7 +669,8 @@ _Default Value:_ `"image_url"`
 <ExpandableBreakout
   slot="entry"
   id="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
-  headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+json_schema+jsonschema" parentId="document_annotation_format_ResponseFormat_json_schema"
+  headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+json_schema+jsonschema"
+  parentId="document_annotation_format_ResponseFormat_json_schema"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -683,6 +701,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+json_schema+jsonschema+description"
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -739,6 +758,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+json_schema+jsonschema+strict"
   parentId="document_annotation_format_ResponseFormat_json_schema_JsonSchema"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -757,6 +777,7 @@ _Default Value:_ `"image_url"`
   headingId="operation-ocr_v1_ocr_post+request+document_annotation_format+responseformat+type"
   parentId="document_annotation_format_ResponseFormat"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_object\"","linkedLabel":"\"json_object\"","children":[],"breakoutSubTypes":{}},{"label":"\"json_schema\"","linkedLabel":"\"json_schema\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -780,6 +801,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="id"
   headingId="operation-ocr_v1_ocr_post+request+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -797,6 +819,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="image_limit"
   headingId="operation-ocr_v1_ocr_post+request+image_limit"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -814,6 +837,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="image_min_size"
   headingId="operation-ocr_v1_ocr_post+request+image_min_size"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -831,6 +855,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="include_image_base64"
   headingId="operation-ocr_v1_ocr_post+request+include_image_base64"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -866,6 +891,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   id="pages"
   headingId="operation-ocr_v1_ocr_post+request+pages"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"integer","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -917,6 +943,7 @@ Successful Response
   id="document_annotation"
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+document_annotation"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -980,7 +1007,8 @@ List of OCR info for pages.
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject"
-  headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject" parentId="pages"
+  headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject"
+  parentId="pages"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1027,7 +1055,8 @@ List of OCR info for pages.
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject_dimensions_OCRPageDimensions"
-  headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+dimensions+ocrpagedimensions" parentId="pages_OCRPageObject_dimensions"
+  headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+dimensions+ocrpagedimensions"
+  parentId="pages_OCRPageObject_dimensions"
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1157,7 +1186,8 @@ List of all extracted images in the page
 <ExpandableBreakout
   slot="entry"
   id="pages_OCRPageObject_images_OCRImageObject"
-  headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+images+ocrimageobject" parentId="pages_OCRPageObject_images"
+  headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+images+ocrimageobject"
+  parentId="pages_OCRPageObject_images"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1251,6 +1281,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+images+ocrimageobject+image_annotation"
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1269,6 +1300,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+images+ocrimageobject+image_base64"
   parentId="pages_OCRPageObject_images_OCRImageObject"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1393,6 +1425,7 @@ The markdown string response of the page
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+usage_info+doc_size_bytes"
   parentId="usage_info"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
