--- a/examples/docusaurus/pokeapi/docs/api/endpoint/contests.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/contests.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_contest_type_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_contest_type_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_contest_type_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_contest_type_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_type_list+responses+200+application-json+results+contesttypesummary\">ContestTypeSummary</a>","children":[{"label":"ContestTypeSummary","linkedLabel":"<a href=\"#operation-api_v2_contest_type_list+responses+200+application-json+results+contesttypesummary\">ContestTypeSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ContestTypeSummary"
-  headingId="operation-api_v2_contest_type_list+responses+200+application-json+results+contesttypesummary" parentId="results"
+  headingId="operation-api_v2_contest_type_list+responses+200+application-json+results+contesttypesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -653,7 +658,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_ContestTypeName"
-  headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+names+contesttypename" parentId="names"
+  headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+names+contesttypename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -979,6 +985,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_contest_effect_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1006,6 +1013,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_contest_effect_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1033,6 +1041,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_contest_effect_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1060,6 +1069,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_contest_effect_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_list+responses+200+application-json+results+contesteffectsummary\">ContestEffectSummary</a>","children":[{"label":"ContestEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_list+responses+200+application-json+results+contesteffectsummary\">ContestEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1075,7 +1085,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ContestEffectSummary"
-  headingId="operation-api_v2_contest_effect_list+responses+200+application-json+results+contesteffectsummary" parentId="results"
+  headingId="operation-api_v2_contest_effect_list+responses+200+application-json+results+contesteffectsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1310,7 +1321,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_ContestEffectEffectText"
-  headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+effect_entries+contesteffecteffecttext" parentId="effect_entries"
+  headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+effect_entries+contesteffecteffecttext"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1432,7 +1444,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_ContestEffectFlavorText"
-  headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+contesteffectflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+contesteffectflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1775,6 +1788,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_super_contest_effect_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1802,6 +1816,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_super_contest_effect_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1829,6 +1844,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_super_contest_effect_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1856,6 +1872,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_super_contest_effect_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_list+responses+200+application-json+results+supercontesteffectsummary\">SuperContestEffectSummary</a>","children":[{"label":"SuperContestEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_list+responses+200+application-json+results+supercontesteffectsummary\">SuperContestEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1871,7 +1888,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_SuperContestEffectSummary"
-  headingId="operation-api_v2_super_contest_effect_list+responses+200+application-json+results+supercontesteffectsummary" parentId="results"
+  headingId="operation-api_v2_super_contest_effect_list+responses+200+application-json+results+supercontesteffectsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2106,7 +2124,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_SuperContestEffectFlavorText"
-  headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+supercontesteffectflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+supercontesteffectflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2246,7 +2265,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_MoveSummary"
-  headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+moves+movesummary" parentId="moves"
+  headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+moves+movesummary"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
