--- a/examples/docusaurus/pokeapi/docs/api/endpoint/games.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/games.mdx
@@ -230,6 +230,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_generation_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -257,6 +258,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_generation_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -284,6 +286,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_generation_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -311,6 +314,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_generation_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_list+responses+200+application-json+results+generationsummary\">GenerationSummary</a>","children":[{"label":"GenerationSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_list+responses+200+application-json+results+generationsummary\">GenerationSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -326,7 +330,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_GenerationSummary"
-  headingId="operation-api_v2_generation_list+responses+200+application-json+results+generationsummary" parentId="results"
+  headingId="operation-api_v2_generation_list+responses+200+application-json+results+generationsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -562,7 +567,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="abilities_AbilitySummary"
-  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+abilities+abilitysummary" parentId="abilities"
+  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+abilities+abilitysummary"
+  parentId="abilities"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -720,7 +726,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_MoveSummary"
-  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+moves+movesummary" parentId="moves"
+  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+moves+movesummary"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -822,7 +829,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_GenerationName"
-  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+names+generationname" parentId="names"
+  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+names+generationname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -944,7 +952,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_species_PokemonSpeciesSummary"
-  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+pokemon_species+pokemonspeciessummary" parentId="pokemon_species"
+  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+pokemon_species+pokemonspeciessummary"
+  parentId="pokemon_species"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1028,7 +1037,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="types_TypeSummary"
-  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+types+typesummary" parentId="types"
+  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+types+typesummary"
+  parentId="types"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1112,7 +1122,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="version_groups_VersionGroupSummary"
-  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+version_groups+versiongroupsummary" parentId="version_groups"
+  headingId="operation-api_v2_generation_retrieve+responses+200+application-json+version_groups+versiongroupsummary"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1381,6 +1392,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_pokedex_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1408,6 +1420,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_pokedex_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1435,6 +1448,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_pokedex_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1462,6 +1476,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_pokedex_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_list+responses+200+application-json+results+pokedexsummary\">PokedexSummary</a>","children":[{"label":"PokedexSummary","linkedLabel":"<a href=\"#operation-api_v2_pokedex_list+responses+200+application-json+results+pokedexsummary\">PokedexSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1477,7 +1492,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_PokedexSummary"
-  headingId="operation-api_v2_pokedex_list+responses+200+application-json+results+pokedexsummary" parentId="results"
+  headingId="operation-api_v2_pokedex_list+responses+200+application-json+results+pokedexsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1713,7 +1729,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="descriptions_PokedexDescription"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+descriptions+pokedexdescription" parentId="descriptions"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+descriptions+pokedexdescription"
+  parentId="descriptions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1744,6 +1761,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+descriptions+pokedexdescription+description"
   parentId="descriptions_PokedexDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1836,6 +1854,7 @@ This parameter can be a string or an integer.
   id="is_main_series"
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+is_main_series"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1887,7 +1906,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_PokedexName"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+names+pokedexname" parentId="names"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+names+pokedexname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2009,7 +2029,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_entries_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+pokemon_entries+pokemon_entry" parentId="pokemon_entries"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+pokemon_entries+pokemon_entry"
+  parentId="pokemon_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2217,7 +2238,8 @@ https://pokeapi.co/api/v2/pokemon-species/1/
 <ExpandableBreakout
   slot="entry"
   id="version_groups_pokemon_entry"
-  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry" parentId="version_groups"
+  headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+version_groups+pokemon_entry"
+  parentId="version_groups"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2554,6 +2576,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_version_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2581,6 +2604,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_version_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2608,6 +2632,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_version_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2635,6 +2660,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_version_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_list+responses+200+application-json+results+versionsummary\">VersionSummary</a>","children":[{"label":"VersionSummary","linkedLabel":"<a href=\"#operation-api_v2_version_list+responses+200+application-json+results+versionsummary\">VersionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2650,7 +2676,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_VersionSummary"
-  headingId="operation-api_v2_version_list+responses+200+application-json+results+versionsummary" parentId="results"
+  headingId="operation-api_v2_version_list+responses+200+application-json+results+versionsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2930,7 +2957,8 @@ not sure how to add anything other than a hyperlink
 <ExpandableBreakout
   slot="entry"
   id="names_VersionName"
-  headingId="operation-api_v2_version_retrieve+responses+200+application-json+names+versionname" parentId="names"
+  headingId="operation-api_v2_version_retrieve+responses+200+application-json+names+versionname"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3293,6 +3321,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_version_group_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3320,6 +3349,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_version_group_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3347,6 +3377,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_version_group_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3374,6 +3405,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_version_group_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_list+responses+200+application-json+results+versiongroupsummary\">VersionGroupSummary</a>","children":[{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_version_group_list+responses+200+application-json+results+versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3389,7 +3421,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_VersionGroupSummary"
-  headingId="operation-api_v2_version_group_list+responses+200+application-json+results+versiongroupsummary" parentId="results"
+  headingId="operation-api_v2_version_group_list+responses+200+application-json+results+versiongroupsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3699,7 +3732,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="move_learn_methods_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+move_learn_methods+move_learn_method" parentId="move_learn_methods"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+move_learn_methods+move_learn_method"
+  parentId="move_learn_methods"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3805,6 +3839,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   id="order"
   headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+order"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3838,7 +3873,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 <ExpandableBreakout
   slot="entry"
   id="pokedexes_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method" parentId="pokedexes"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+pokedexes+move_learn_method"
+  parentId="pokedexes"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3942,7 +3978,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 <ExpandableBreakout
   slot="entry"
   id="regions_move_learn_method"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method" parentId="regions"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+regions+move_learn_method"
+  parentId="regions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4046,7 +4083,8 @@ https://pokeapi.co/api/v2/move-learn-method/1/
 <ExpandableBreakout
   slot="entry"
   id="versions_VersionSummary"
-  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+versions+versionsummary" parentId="versions"
+  headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+versions+versionsummary"
+  parentId="versions"
   hasFrontMatter={false}
   expandByDefault={false}
 >
