--- a/examples/docusaurus/pokeapi/docs/api/endpoint/machines.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/machines.mdx
@@ -229,6 +229,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_machine_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -256,6 +257,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_machine_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -283,6 +285,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_machine_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -310,6 +313,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_machine_list+responses+200+application-json+results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -325,7 +329,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_MachineSummary"
-  headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary" parentId="results"
+  headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
