--- a/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/files/page.mdx
@@ -175,7 +175,8 @@ OK
 <ExpandableBreakout
   slot="entry"
   id="data_FileSchema"
-  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema" parentId="data"
+  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema"
+  parentId="data"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -311,6 +312,7 @@ _Example:_
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_num_lines"
   parentId="data_FileSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -685,6 +687,7 @@ The File object (not file name) to be uploaded.
   id="purpose"
   headingId="operation-files_api_routes_upload_file_request_purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -838,6 +841,7 @@ _Example:_
   id="num_lines"
   headingId="operation-files_api_routes_upload_file_responses_200_application-json_num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1265,6 +1269,7 @@ _Example:_
   id="num_lines"
   headingId="operation-files_api_routes_retrieve_file_responses_200_application-json_num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
