--- a/examples/nextra/pokeapi/src/app/api/endpoint/contests/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/contests/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_contest_type_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_contest_type_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_contest_type_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_contest_type_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary\">ContestTypeSummary</a>","children":[{"label":"ContestTypeSummary","linkedLabel":"<a href=\"#operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary\">ContestTypeSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ContestTypeSummary"
-  headingId="operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary" parentId="results"
+  headingId="operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -652,7 +657,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_ContestTypeName"
-  headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename" parentId="names"
+  headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -978,6 +984,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_contest_effect_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1005,6 +1012,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_contest_effect_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1032,6 +1040,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_contest_effect_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1059,6 +1068,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_contest_effect_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_list_responses_200_application-json_results_contesteffectsummary\">ContestEffectSummary</a>","children":[{"label":"ContestEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_list_responses_200_application-json_results_contesteffectsummary\">ContestEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1074,7 +1084,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_ContestEffectSummary"
-  headingId="operation-api_v2_contest_effect_list_responses_200_application-json_results_contesteffectsummary" parentId="results"
+  headingId="operation-api_v2_contest_effect_list_responses_200_application-json_results_contesteffectsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1309,7 +1320,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="effect_entries_ContestEffectEffectText"
-  headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_effect_entries_contesteffecteffecttext" parentId="effect_entries"
+  headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_effect_entries_contesteffecteffecttext"
+  parentId="effect_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1431,7 +1443,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_ContestEffectFlavorText"
-  headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_contesteffectflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_contesteffectflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1774,6 +1787,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_super_contest_effect_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1801,6 +1815,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_super_contest_effect_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1828,6 +1843,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_super_contest_effect_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1855,6 +1871,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_super_contest_effect_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_list_responses_200_application-json_results_supercontesteffectsummary\">SuperContestEffectSummary</a>","children":[{"label":"SuperContestEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_list_responses_200_application-json_results_supercontesteffectsummary\">SuperContestEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1870,7 +1887,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_SuperContestEffectSummary"
-  headingId="operation-api_v2_super_contest_effect_list_responses_200_application-json_results_supercontesteffectsummary" parentId="results"
+  headingId="operation-api_v2_super_contest_effect_list_responses_200_application-json_results_supercontesteffectsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2105,7 +2123,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="flavor_text_entries_SuperContestEffectFlavorText"
-  headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_supercontesteffectflavortext" parentId="flavor_text_entries"
+  headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_supercontesteffectflavortext"
+  parentId="flavor_text_entries"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2245,7 +2264,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="moves_MoveSummary"
-  headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_moves_movesummary" parentId="moves"
+  headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_moves_movesummary"
+  parentId="moves"
   hasFrontMatter={false}
   expandByDefault={false}
 >
