--- a/examples/nextra/pokeapi/src/app/api/endpoint/evolution/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/evolution/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_evolution_chain_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_evolution_chain_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_evolution_chain_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_evolution_chain_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list_responses_200_application-json_results_evolutionchainsummary\">EvolutionChainSummary</a>","children":[{"label":"EvolutionChainSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list_responses_200_application-json_results_evolutionchainsummary\">EvolutionChainSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EvolutionChainSummary"
-  headingId="operation-api_v2_evolution_chain_list_responses_200_application-json_results_evolutionchainsummary" parentId="results"
+  headingId="operation-api_v2_evolution_chain_list_responses_200_application-json_results_evolutionchainsummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -692,7 +697,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail"
-  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail" parentId="chain_species_evolution_details"
+  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail"
+  parentId="chain_species_evolution_details"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -758,7 +764,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_held_item_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_held_item_gender" parentId="chain_species_evolution_details_evolution_detail_held_item"
+  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_held_item_gender"
+  parentId="chain_species_evolution_details_evolution_detail_held_item"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -863,7 +870,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_item_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_item_gender" parentId="chain_species_evolution_details_evolution_detail_item"
+  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_item_gender"
+  parentId="chain_species_evolution_details_evolution_detail_item"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1006,7 +1014,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_location_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_location_gender" parentId="chain_species_evolution_details_evolution_detail_location"
+  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_location_gender"
+  parentId="chain_species_evolution_details_evolution_detail_location"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1301,7 +1310,8 @@ _Example:_
 <ExpandableBreakout
   slot="entry"
   id="chain_species_evolution_details_evolution_detail_trigger_gender"
-  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_trigger_gender" parentId="chain_species_evolution_details_evolution_detail_trigger"
+  headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_chain_species_evolution_details_evolution_detail_trigger_gender"
+  parentId="chain_species_evolution_details_evolution_detail_trigger"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1646,6 +1656,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1673,6 +1684,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1700,6 +1712,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1727,6 +1740,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_trigger_list_responses_200_application-json_results_evolutiontriggersummary\">EvolutionTriggerSummary</a>","children":[{"label":"EvolutionTriggerSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_trigger_list_responses_200_application-json_results_evolutiontriggersummary\">EvolutionTriggerSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1742,7 +1756,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_EvolutionTriggerSummary"
-  headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_results_evolutiontriggersummary" parentId="results"
+  headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_results_evolutiontriggersummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2014,7 +2029,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_EvolutionTriggerName"
-  headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_names_evolutiontriggername" parentId="names"
+  headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_names_evolutiontriggername"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2136,7 +2152,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="pokemon_species_pokemon_specie"
-  headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_pokemon_species_pokemon_specie" parentId="pokemon_species"
+  headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_pokemon_species_pokemon_specie"
+  parentId="pokemon_species"
   hasFrontMatter={false}
   expandByDefault={false}
 >
