--- a/examples/nextra/pokeapi/src/app/api/endpoint/utility/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/utility/page.mdx
@@ -228,6 +228,7 @@ Case-insensitive query applied on the `name` property.
   id="count"
   headingId="operation-api_v2_language_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -255,6 +256,7 @@ _Example:_
   id="next"
   headingId="operation-api_v2_language_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -282,6 +284,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   id="previous"
   headingId="operation-api_v2_language_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -309,6 +312,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   id="results"
   headingId="operation-api_v2_language_list_responses_200_application-json_results"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -324,7 +328,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableBreakout
   slot="entry"
   id="results_LanguageSummary"
-  headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary" parentId="results"
+  headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary"
+  parentId="results"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -632,7 +637,8 @@ This parameter can be a string or an integer.
 <ExpandableBreakout
   slot="entry"
   id="names_LanguageName"
-  headingId="operation-api_v2_language_retrieve_responses_200_application-json_names_languagename" parentId="names"
+  headingId="operation-api_v2_language_retrieve_responses_200_application-json_names_languagename"
+  parentId="names"
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -738,6 +744,7 @@ This parameter can be a string or an integer.
   id="official"
   headingId="operation-api_v2_language_retrieve_responses_200_application-json_official"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  typeAnnotations={[]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
